--- a/public/i18n/ach.json
+++ b/public/i18n/ach.json
@@ -80,6 +80,7 @@
     "165682516": "crwdns156812:0crwdne156812:0",
     "170185684": "crwdns68958:0crwdne68958:0",
     "171307423": "crwdns156262:0crwdne156262:0",
+    "171683420": "crwdns159484:0crwdne159484:0",
     "176319758": "crwdns123582:0crwdne123582:0",
     "176654019": "crwdns80001:0crwdne80001:0",
     "179083332": "crwdns123584:0crwdne123584:0",
@@ -237,6 +238,8 @@
     "438067535": "crwdns80089:0crwdne80089:0",
     "440529960": "crwdns117136:0crwdne117136:0",
     "442520703": "crwdns80091:0crwdne80091:0",
+    "443083339": "crwdns159486:0{{ account_type }}crwdne159486:0",
+    "443933119": "crwdns159488:0crwdne159488:0",
     "444484637": "crwdns120746:0crwdne120746:0",
     "451852761": "crwdns156302:0crwdne156302:0",
     "452054360": "crwdns69060:0crwdne69060:0",
@@ -248,6 +251,7 @@
     "462079779": "crwdns80093:0crwdne80093:0",
     "463361726": "crwdns80095:0crwdne80095:0",
     "465993338": "crwdns158248:0crwdne158248:0",
+    "466369320": "crwdns159490:0crwdne159490:0",
     "471195330": "crwdns123634:0crwdne123634:0",
     "473154195": "crwdns80097:0crwdne80097:0",
     "475492878": "crwdns80099:0crwdne80099:0",
@@ -305,6 +309,7 @@
     "565410797": "crwdns84871:0crwdne84871:0",
     "566274201": "crwdns84873:0crwdne84873:0",
     "567019968": "crwdns84875:0crwdne84875:0",
+    "567509873": "crwdns159492:0crwdne159492:0",
     "573173477": "crwdns156982:0{{ input_candle }}crwdne156982:0",
     "577215477": "crwdns156984:0{{ variable }}crwdnd156984:0{{ start_number }}crwdnd156984:0{{ end_number }}crwdnd156984:0{{ step_size }}crwdne156984:0",
     "577779861": "crwdns80135:0crwdne80135:0",
@@ -337,7 +342,6 @@
     "626175020": "crwdns156988:0{{ input_number }}crwdne156988:0",
     "626809456": "crwdns80151:0crwdne80151:0",
     "627292452": "crwdns80153:0crwdne80153:0",
-    "627526394": "crwdns159362:0crwdne159362:0",
     "627814558": "crwdns70436:0crwdne70436:0",
     "629145209": "crwdns89250:0crwdne89250:0",
     "632398049": "crwdns70438:0crwdne70438:0",
@@ -365,6 +369,7 @@
     "654924603": "crwdns158250:0crwdne158250:0",
     "657325150": "crwdns84887:0crwdne84887:0",
     "660481941": "crwdns156992:0crwdne156992:0",
+    "660991534": "crwdns159494:0crwdne159494:0",
     "662609119": "crwdns158956:0crwdne158956:0",
     "663124295": "crwdns123674:0crwdne123674:0",
     "665872465": "crwdns89254:0crwdne89254:0",
@@ -481,7 +486,6 @@
     "851508288": "crwdns84909:0crwdne84909:0",
     "852583045": "crwdns69194:0crwdne69194:0",
     "854399751": "crwdns121216:0crwdne121216:0",
-    "856713568": "crwdns159366:0crwdne159366:0",
     "857986403": "crwdns69196:0crwdne69196:0",
     "860319618": "crwdns80229:0crwdne80229:0",
     "862283602": "crwdns80231:0crwdne80231:0",
@@ -658,7 +662,6 @@
     "1134879544": "crwdns156384:0crwdne156384:0",
     "1143730031": "crwdns157016:0{{ direction_type }}crwdne157016:0",
     "1144028300": "crwdns69274:0crwdne69274:0",
-    "1144288893": "crwdns159372:0crwdne159372:0",
     "1145927365": "crwdns70456:0crwdne70456:0",
     "1151964318": "crwdns69276:0crwdne69276:0",
     "1154021400": "crwdns69280:0crwdne69280:0",
@@ -813,7 +816,6 @@
     "1367023655": "crwdns124684:0crwdne124684:0",
     "1367488817": "crwdns89330:0crwdne89330:0",
     "1367990698": "crwdns80477:0crwdne80477:0",
-    "1368002992": "crwdns159374:0crwdne159374:0",
     "1369709538": "crwdns159376:0crwdne159376:0",
     "1371193412": "crwdns69362:0crwdne69362:0",
     "1371641641": "crwdns156418:0crwdne156418:0",
@@ -925,7 +927,6 @@
     "1534796105": "crwdns69430:0crwdne69430:0",
     "1539108340": "crwdns80555:0crwdne80555:0",
     "1540585098": "crwdns117188:0crwdne117188:0",
-    "1541818425": "crwdns159380:0crwdne159380:0",
     "1541969455": "crwdns69432:0crwdne69432:0",
     "1544642951": "crwdns89340:0crwdne89340:0",
     "1549098835": "crwdns80557:0crwdne80557:0",
@@ -1136,7 +1137,6 @@
     "1903437648": "crwdns158714:0crwdne158714:0",
     "1905032541": "crwdns156484:0crwdne156484:0",
     "1906639368": "crwdns120620:0crwdne120620:0",
-    "1908023954": "crwdns159384:0crwdne159384:0",
     "1908239019": "crwdns156486:0crwdne156486:0",
     "1909769048": "crwdns69582:0crwdne69582:0",
     "1914014145": "crwdns80693:0crwdne80693:0",
@@ -1238,7 +1238,6 @@
     "2054500647": "crwdns124352:0crwdne124352:0",
     "2054889300": "crwdns89398:0%1crwdne89398:0",
     "2055317803": "crwdns156510:0crwdne156510:0",
-    "2056801626": "crwdns159388:0crwdne159388:0",
     "2057419639": "crwdns125102:0crwdne125102:0",
     "2062912059": "crwdns157062:0{{ function_name }}crwdnd157062:0{{ function_params }}crwdne157062:0",
     "2063655921": "crwdns117218:0crwdne117218:0",
@@ -1294,6 +1293,7 @@
     "2143803283": "crwdns80791:0crwdne80791:0",
     "2144609616": "crwdns89408:0crwdne89408:0",
     "2145690912": "crwdns80793:0crwdne80793:0",
+    "2145995536": "crwdns159496:0crwdne159496:0",
     "2146336100": "crwdns69654:0%1crwdnd69654:0%2crwdne69654:0",
     "2146892766": "crwdns124358:0crwdne124358:0",
     "-2024100696": "crwdns118052:0crwdne118052:0",
@@ -1530,8 +1530,8 @@
     "-2073934245": "crwdns121006:0crwdne121006:0",
     "-1970096931": "crwdns124054:0crwdne124054:0",
     "-1988735853": "crwdns124056:0crwdne124056:0",
-    "-2068229627": "crwdns81631:0crwdne81631:0",
     "-1125193491": "crwdns81393:0crwdne81393:0",
+    "-2068229627": "crwdns81631:0crwdne81631:0",
     "-763249420": "crwdns81121:0{{page_title}}crwdne81121:0",
     "-207063174": "crwdns81123:0crwdne81123:0",
     "-2139303636": "crwdns120688:0crwdne120688:0",
@@ -1618,7 +1618,6 @@
     "-1738671831": "crwdns125154:0crwdne125154:0",
     "-1776746512": "crwdns81259:0crwdne81259:0",
     "-1465674403": "crwdns81261:0crwdne81261:0",
-    "-1233938428": "crwdns159400:0crwdne159400:0",
     "-1868608634": "crwdns81263:0crwdne81263:0",
     "-89973258": "crwdns117886:0{{seconds}}crwdne117886:0",
     "-1617352279": "crwdns81267:0crwdne81267:0",
@@ -2022,7 +2021,6 @@
     "-1125272179": "crwdns124394:0crwdne124394:0",
     "-974989415": "crwdns124088:0crwdne124088:0",
     "-1639808836": "crwdns124398:0crwdne124398:0",
-    "-257890048": "crwdns124400:0crwdne124400:0",
     "-1505742956": "crwdns124402:0crwdne124402:0",
     "-1406192787": "crwdns124100:0crwdne124100:0",
     "-1776547326": "crwdns158854:0crwdne158854:0",
@@ -2203,15 +2201,11 @@
     "-382495564": "crwdns120670:0crwdne120670:0",
     "-2042845290": "crwdns120672:0crwdne120672:0",
     "-1882295407": "crwdns120674:0crwdne120674:0",
-    "-985529779": "crwdns159402:0crwdne159402:0",
     "-254497873": "crwdns120678:0crwdne120678:0",
     "-161656683": "crwdns81379:0crwdne81379:0",
     "-374736923": "crwdns81381:0crwdne81381:0",
     "-1793894323": "crwdns81383:0crwdne81383:0",
     "-1444706724": "crwdns120680:0{{account_title}}crwdne120680:0",
-    "-1234339445": "crwdns159404:0crwdne159404:0",
-    "-1418023997": "crwdns159406:0crwdne159406:0",
-    "-140300511": "crwdns159408:0crwdne159408:0",
     "-1987408434": "crwdns159410:0crwdne159410:0",
     "-1281078994": "crwdns158972:0{{ account_type }}crwdne158972:0",
     "-1752211105": "crwdns81395:0crwdne81395:0",
@@ -2256,7 +2250,6 @@
     "-2131859340": "crwdns158214:0crwdne158214:0",
     "-1686280757": "crwdns121916:0{{commission_percentage}}crwdnd121916:0{{multiplier}}crwdne121916:0",
     "-1043117679": "crwdns158216:0{{stop_out_percentage}}crwdne158216:0",
-    "-1686434406": "crwdns117294:0crwdne117294:0",
     "-477998532": "crwdns89654:0crwdne89654:0",
     "-243332856": "crwdns117904:0{{ underlying_name }}crwdne117904:0",
     "-1675848843": "crwdns69698:0crwdne69698:0",
@@ -2354,7 +2347,7 @@
     "-1652241017": "crwdns69886:0crwdne69886:0",
     "-2012970860": "crwdns70524:0crwdne70524:0",
     "-985351204": "crwdns69890:0crwdne69890:0",
-    "-1155426882": "crwdns69892:0crwdne69892:0",
+    "-2082345383": "crwdns159498:0crwdne159498:0",
     "-172574065": "crwdns69894:0crwdne69894:0",
     "-403103225": "crwdns121794:0crwdne121794:0",
     "-837044282": "crwdns157086:0{{ contract_type }}crwdne157086:0",
