--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -80,6 +80,7 @@
     "165682516": "Si cela ne vous dérange pas de partager votre expérience, quelles autres plateformes de trading utilisez-vous?",
     "170185684": "Ignorer",
     "171307423": "Récupération",
+    "171683420": "Reset main password",
     "176319758": "Max. mise totale sur 30 jours",
     "176654019": "$100,000 - $250,000",
     "179083332": "Date",
@@ -237,6 +238,8 @@
     "438067535": "Plus de 500 000 $",
     "440529960": "Créer votre mot de passe",
     "442520703": "$250,000 - $500,000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Négation logique",
     "451852761": "Continuez sur votre téléphone",
     "452054360": "Semblable à RSI, ce bloc vous donne une liste de valeurs pour chaque entrée de la liste d'entrée.",
@@ -248,6 +251,7 @@
     "462079779": "La revente n'est pas proposée",
     "463361726": "Sélectionnez un objet",
     "465993338": "Oscar's Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Le nom de famille est requis",
     "473154195": "Paramètres",
     "475492878": "Essayez les indices synthétiques",
@@ -305,6 +309,7 @@
     "565410797": "L'image ci-dessous illustre le fonctionnement du bloc Simple Moving Average Array:",
     "566274201": "1. Marché",
     "567019968": "Une variable fait partie des composants les plus importants et les plus puissants de la création d'un bot. C'est un moyen de stocker des informations, sous forme de texte ou de chiffres. Les informations stockées sous forme de variable peuvent être utilisées et modifiées selon les instructions données. Les variables peuvent recevoir n'importe quel nom, mais elles reçoivent généralement des noms symboliques utiles pour qu'il soit plus facile de les appeler lors de l'exécution des instructions.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "La bougie {{ input_candle }} est-elle noire?",
     "577215477": "compter avec {{ variable }} de {{ start_number }} à {{ end_number }} par {{ step_size }}",
     "577779861": "Retrait",
@@ -337,7 +342,6 @@
     "626175020": "Multiplicateur d'augmentation de l'écart type {{ input_number }}",
     "626809456": "Soumettre à nouveau",
     "627292452": "<0>Votre preuve d'identité ou votre preuve d'adresse</0> ne répondait pas à nos exigences. Veuillez vérifier votre e-mail pour plus d'instructions.",
-    "627526394": "All you need from now is one password",
     "627814558": "Ce bloc renvoie une valeur lorsqu'une condition est vraie. Utilisez ce bloc dans l'un des blocs fonction ci-dessus.",
     "629145209": "Dans le cas où si l'opération \"ET\" est sélectionnée, le bloc ne renvoie \"Vrai\" que si les deux valeurs données sont \"Vrai\"",
     "632398049": "Ce bloc attribue une valeur nulle à un élément ou une instruction.",
@@ -365,6 +369,7 @@
     "654924603": "Martingale",
     "657325150": "Ce bloc est utilisé pour définir les options commerciales dans le bloc racine des paramètres commerciaux. Certaines options ne s'appliquent qu'à certains types de transactions. Des paramètres tels que la durée et la mise sont communs à la plupart des types de transactions. La prédiction est utilisée pour les types de commerce tels que les chiffres, tandis que les décalages de barrière sont pour les types de commerce qui impliquent des obstacles tels que Touch/No Touch, Ends In/Out, etc.",
     "660481941": "Pour accéder à vos applications mobiles et à d'autres applications tierces, vous devez d'abord générer un token API.",
+    "660991534": "Finish",
     "662609119": "Téléchargez l’application MT5",
     "663124295": "Disponibilité",
     "665872465": "Dans l'exemple ci-dessous, le prix d'ouverture est sélectionné, qui est ensuite affecté à une variable appelée \"op\".",
@@ -481,7 +486,6 @@
     "851508288": "Ce bloc contraint un nombre donné dans une plage définie.",
     "852583045": "Cochez la chaîne de liste",
     "854399751": "Le code numérique ne doit contenir que des chiffres.",
-    "856713568": "Too many failed attempt",
     "857986403": "faire quelque chose",
     "860319618": "Tourisme",
     "862283602": "Numéro de téléphone*",
@@ -658,7 +662,6 @@
     "1134879544": "Exemple de document avec reflets",
     "1143730031": "Direction est {{ direction_type }}",
     "1144028300": "Tableau de Relative Strength Index",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
     "1145927365": "Exécutez les blocs à l'intérieur après un nombre donné de secondes",
     "1151964318": "des deux côtés",
     "1154021400": "liste",
@@ -813,7 +816,6 @@
     "1367023655": "Pour vous assurer que votre perte ne dépasse pas votre mise, votre contrat sera automatiquement clôturé lorsque votre perte sera égale à <0/>.",
     "1367488817": "4. Redémarrez les conditions de trading",
     "1367990698": "Indice Volatilité 10",
-    "1368002992": "Go to Settings",
     "1369709538": "Our terms of use",
     "1371193412": "Annuler",
     "1371641641": "Ouvrez le lien sur votre mobile",
@@ -925,7 +927,6 @@
     "1534796105": "Obtient une valeur variable",
     "1539108340": "Indice EUR",
     "1540585098": "Refuser",
-    "1541818425": "Reset password",
     "1541969455": "Les deux",
     "1544642951": "Si vous sélectionnez \"Only Ups\", vous gagnez le paiement si des ticks consécutifs augmentent successivement après le point d'entrée. Aucun paiement si un tick tombe ou est égal à l'un des ticks précédents.",
     "1549098835": "Total retiré",
@@ -1136,7 +1137,6 @@
     "1903437648": "Photo floue détectée",
     "1905032541": "Nous sommes maintenant prêts à vérifier votre identité",
     "1906639368": "Si c'est la première fois que vous essayez de créer un mot de passe, ou si vous avez oublié votre mot de passe, veuillez le réinitialiser.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
     "1908239019": "Assurez-vous que tout le document est sur la photo",
     "1909769048": "médian",
     "1914014145": "Aujourd'hui",
@@ -1238,7 +1238,6 @@
     "2054500647": "Cette politique de réclamation, qui peut changer de temps en temps, s'applique à votre (vos) compte(s) enregistré(s) auprès de Deriv (SVG) LLC et Deriv (V) Ltd.",
     "2054889300": "Créer \"%1\"",
     "2055317803": "Copiez le lien dans votre navigateur mobile",
-    "2056801626": "Confirm your password",
     "2057419639": "Point de sortie",
     "2062912059": "fonction {{ function_name }} {{ function_params }}",
     "2063655921": "En achetant le contrat « Clôture-Bas », vous gagnerez le multiplicateur fois la différence entre la clôture et le bas pendant toute la durée du contrat.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Erreur d'achat",
     "2144609616": "Si vous sélectionnez \"Reset-Down\", vous gagnez le paiement si le point de sortie est strictement inférieur au point d'entrée ou au point de réinitialisation.",
     "2145690912": "Revenus salariés",
+    "2145995536": "Create new account",
     "2146336100": "dans le texte %1 avoir %2",
     "2146892766": "Expérience de trading d’options binaires",
     "-2024100696": "Réel Synthétique",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Les services de trading financier proposés sur ce site ne conviennent qu'aux clients qui acceptent la possibilité de perdre tout l'argent qu'ils investissent et qui comprennent et ont une expérience du risque lié à l'achat de contrats financiers. Les transactions sur contrats financiers comportent un degré de risque élevé. Si les contrats que vous avez achetés expirent comme sans valeur, vous perdrez tout votre investissement, qui comprend la prime du contrat.",
     "-1970096931": "Votre compte sera ouvert auprès de Deriv (Europe) Limited, réglementé par la Malta Gaming Authority, et sera soumis aux lois de Malte.",
     "-1988735853": "Votre compte sera ouvert auprès de Deriv Investments (Europe) Limited, réglementé par la Malta Financial Services Authority (MFSA) et sera soumis à la juridiction et aux lois de Malte.",
-    "-2068229627": "Je ne suis pas un PEP et je n'ai pas été un PEP au cours des 12 derniers mois.",
     "-1125193491": "Ajouter un compte",
+    "-2068229627": "Je ne suis pas un PEP et je n'ai pas été un PEP au cours des 12 derniers mois.",
     "-763249420": "La page {{page_title}} n'est<0 />disponible que pour les clients existants.",
     "-207063174": "Si vous avez un compte actif, <0>Connectez-vous</0> pour un accès complet. Sinon,<1>Inscrivez-vous</1> pour commencer à trader.",
     "-2139303636": "Vous avez peut-être suivi un lien brisé ou la page s'est redirigée vers une nouvelle adresse.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "La longueur du mot de passe doit être comprise entre 8 et 25 caractères.",
     "-1776746512": "Le mot de passe actuel et le nouveau mot de passe ne peuvent pas être identiques.",
     "-1465674403": "Changez votre mot de passe Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
     "-1868608634": "Mot de passe actuel",
     "-89973258": "Renvoyer l'e-mail dans {{seconds}}s",
     "-1617352279": "L'e-mail est dans votre dossier spam (parfois des choses s'y perdent).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Cette politique de réclamation, qui peut changer de temps à autre, s'applique à votre compte enregistré auprès de Deriv Investments (Europe) Limited.",
     "-974989415": "Cette politique de réclamation, qui peut changer de temps en temps, s'applique à votre (vos) compte(s) enregistré(s) auprès de Deriv (SVG) LLC et Deriv (FX) Ltd.",
     "-1639808836": "Si vous n'êtes pas satisfait du résultat, vous pouvez transmettre votre plainte au <0>Service indépendant d'arbitrage des paris (IBAS)</0> en remplissant le formulaire de décision IBAS. Veuillez noter que IBAS ne traite que les litiges résultant de transactions.",
-    "-257890048": "<0/><1/> Vous pouvez également envoyer votre plainte à la <2>plate-forme de règlement en ligne des litiges (ODR) de la Commission européenne</2>.",
     "-1505742956": "<0/><1/> Vous pouvez également soumettre votre litige à la Malta Gaming Authority via l '<2>Unité d'assistance aux joueurs</2>.",
     "-1406192787": "Si vous n'êtes pas satisfait du résultat, vous pouvez transmettre votre plainte à la <0>Commission financière</0>.",
     "-1776547326": "<0/><1/>Si vous résidez au Royaume-Uni et que vous n’êtes pas satisfait de notre réponse, vous pouvez transmettre votre plainte au <2>Financial Ombudsman Service</2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "Mot de passe changé",
     "-2042845290": "Votre mot de passe investisseur a été modifié.",
     "-1882295407": "Votre mot de passe a été modifié.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
     "-254497873": "Utilisez ce mot de passe pour accorder l'accès de visualisation à un autre utilisateur. Bien qu'ils puissent consulter votre compte de trading, ils ne pourront pas échanger ou prendre d'autres mesures.",
     "-161656683": "Mot de passe investisseur actuel",
     "-374736923": "Nouveau mot de passe investisseur",
     "-1793894323": "Créer ou réinitialiser le mot de passe de l'investisseur",
     "-1444706724": "Gérer le mot de passe du compte DMT5 Real {{account_title}}",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
     "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "Choisissez un serveur pour votre compte DMT5 {{ account_type }}",
     "-1752211105": "Transférer maintenant",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Stop out <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> de (<1/> * {{multiplier}})",
     "-1043117679": "Lorsque votre perte actuelle est égale ou supérieure à {{stop_out_percentage}}% de votre Equité, votre contrat sera clôturé au prix d'actif disponible le plus proche.",
-    "-1686434406": "Votre profit est le pourcentage de variation du prix du marché multiplié par votre mise et le multiplicateur choisi ici.",
     "-477998532": "Votre contrat est automatiquement clôturé lorsque votre perte est supérieure ou égale à ce montant.",
     "-243332856": "Statistiques du dernier chiffre pour les 1000 derniers ticks pour {{ underlying_name }}",
     "-1675848843": "Erreur",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Lit une propriété sélectionnée dans la liste des détails du contrat",
     "-2012970860": "Ce bloc vous donne des informations sur votre dernier contrat.",
     "-985351204": "Trader à nouveau",
-    "-1155426882": "Cela bloque les transferts de contrôle vers le bloc Conditions d'achat.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Ce bloc transférera le contrôle vers le bloc Conditions d'achat, vous permettant d'acheter un autre contrat.",
     "-403103225": "redémarrer",
     "-837044282": "Prix d'achat {{ contract_type }}",
