--- a/public/i18n/id.json
+++ b/public/i18n/id.json
@@ -80,6 +80,7 @@
     "165682516": "Trading platform lain apakah yang biasa anda gunakan?",
     "170185684": "Abaikan",
     "171307423": "Pemulihan",
+    "171683420": "Reset main password",
     "176319758": "Maks. total modal dalam 30 hari",
     "176654019": "$100.000 - $250.000",
     "179083332": "Tanggal",
@@ -237,6 +238,8 @@
     "438067535": "Lebih dari $500.000",
     "440529960": "Pilih kata sandi Anda",
     "442520703": "$250.001 - $500.000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Negasi logika",
     "451852761": "Lanjutkan pada telepon Anda",
     "452054360": "Hampir sama dengan RSI, blok ini memberi Anda daftar nilai untuk setiap entri pada daftar input.",
@@ -248,6 +251,7 @@
     "462079779": "Penjualan ulang tidak ditawarkan",
     "463361726": "Pilih item",
     "465993338": "Oscar Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Nama belakang diperlukan",
     "473154195": "Pengaturan",
     "475492878": "Coba Indeks Sintetis",
@@ -305,6 +309,7 @@
     "565410797": "Gambar di bawah menggambarkan bagaimana cara kerja blok Simple Moving Average Array:",
     "566274201": "1. Pasar",
     "567019968": "Variabel adalah salah satu komponen yang paling penting dalam pembuatan bot. Merupakan sebuah cara untuk menyimpan informasi, baik dalam teks atau angka. Informasi yang disimpan sebagai variabel dapat digunakan dan diubah sesuai dengan instruksi yang diberikan. Variabel dapat diberi nama apapun, namun biasanya pemberian nama adalah didasarkan pada fungsi sehingga lebih mudah untuk dipanggil selama pelaksanaan instruksi.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "Apakah candle {{ input_candle }} berwarna hitam?",
     "577215477": "hitung dengan {{ variable }} dari {{ start_number }} ke {{ end_number }} oleh {{ step_size }}",
     "577779861": "Penarikan",
@@ -337,7 +342,6 @@
     "626175020": "Standar Deviasi Atas Multiplier {{ input_number }}",
     "626809456": "Kirim ulang",
     "627292452": "<0>Bukti identitas atau bukti alamat Anda</0> tidak memenuhi persyaratan kami. Silakan periksa email Anda untuk petunjuk lebih lanjut.",
-    "627526394": "All you need from now is one password",
     "627814558": "Blok ini akan menampilkan nilai ketika kondisi adalah benar. Gunakan blok ini pada salah satu blok fungsi di atas.",
     "629145209": "Jika pengoperasian \"DAN\" dipilih, maka blok hanya akan menampilkan \"Benar\" jika kedua nilai yang diberikan adalah \"Benar\"",
     "632398049": "Blok ini menetapkan nilai nol pada item atau pernyataan.",
@@ -365,6 +369,7 @@
     "654924603": "Martingale",
     "657325150": "Blok ini digunakan untuk menentukan opsi trading pada blok Trading parameter root. Beberapa opsi hanya berlaku untuk jenis trading tertentu. Parameter seperti durasi dan modal merupakan hal umum di samping jenis kontrak. Analisa digunakan pada jenis kontrak seperti Digit, dimana barrier offset digunakan pada jenis kontrak yang menggunakan barrier seperti Touch/No Touch, Ends In/Out, dll.",
     "660481941": "Untuk mengakses aplikasi seluler dan aplikasi pihak ketiga lainnya, Anda harus membuat token API terlebih dahulu.",
+    "660991534": "Finish",
     "662609119": "Download aplikasi MT5",
     "663124295": "Ketersediaan",
     "665872465": "Pada contoh di bawah ini, harga pembukaan dipilih, yang kemudian ditugaskan pada variabel yang disebut \"op\".",
@@ -481,7 +486,6 @@
     "851508288": "Blok ini membatasi nomor yang diberikan dalam rentang tertentu.",
     "852583045": "Daftar String Tik",
     "854399751": "Kode digit hanya boleh berisi angka.",
-    "856713568": "Too many failed attempt",
     "857986403": "melakukan sesuatu",
     "860319618": "Pariwisata",
     "862283602": "Nomor telepon*",
@@ -658,7 +662,6 @@
     "1134879544": "Contoh dokumen dengan cahaya terang",
     "1143730031": "Jenis arahnya ialah {{ direction_type }}",
     "1144028300": "Larik Indeks Kekuatan Relatif (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
     "1145927365": "Operasikan blok setelah beberapa detik tertentu",
     "1151964318": "kedua belah pihak",
     "1154021400": "daftar",
@@ -813,7 +816,6 @@
     "1367023655": "Untuk memastikan kerugian Anda tidak melebihi modal, kontrak Anda akan ditutup secara otomatis ketika kerugian Anda setara dengan <0/>.",
     "1367488817": "4. Restart kondisi trading",
     "1367990698": "Indeks Volatilitas 10",
-    "1368002992": "Go to Settings",
     "1369709538": "Our terms of use",
     "1371193412": "Batal",
     "1371641641": "Buka tautan pada ponsel Anda",
@@ -925,7 +927,6 @@
     "1534796105": "Dapatkan nilai variabel",
     "1539108340": "Indeks EUR",
     "1540585098": "Ditolak",
-    "1541818425": "Reset password",
     "1541969455": "Keduanya",
     "1544642951": "Jika Anda memilih \"Only Ups\", Anda memperoleh hasil jika tik secara berurutan meningkat setelah spot awal. Pembayaran tidak terjadi jika tik menurun atau sama dengan salah satu tik sebelumnya. ",
     "1549098835": "Total penarikan",
@@ -1136,7 +1137,6 @@
     "1903437648": "Foto buram terdeteksi",
     "1905032541": "Kami sekarang sudah bersedia untuk memverifikasi identitas Anda",
     "1906639368": "Jika ini adalah pertama kalinya Anda mencoba untuk membuat kata sandi, atau Anda lupa kata sandi Anda, silakan atur ulang.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
     "1908239019": "Pastikan semua dokumen terdapat pada foto",
     "1909769048": "median",
     "1914014145": "Hari ini",
@@ -1238,7 +1238,6 @@
     "2054500647": "Kebijakan keluhan ini dapat berubah dari waktu ke waktu, berlaku untuk akun Anda yang terdaftar pada Deriv (SVG) LLC dan Deriv (V) Ltd.",
     "2054889300": "Membuat \"%1\"",
     "2055317803": "Salin tautan ke browser seluler Anda",
-    "2056801626": "Confirm your password",
     "2057419639": "Spot Akhir",
     "2062912059": "fungsi {{ function_name }} {{ function_params }}",
     "2063655921": "Dengan membeli kontrak  \"Close-to-Low \", Anda akan memperoleh hasil pada selisih nilai close (penutupan) dan nilai terendah dikalikan dengan nilai multiplier selama durasi kontrak.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Error pada pembelian",
     "2144609616": "Jika Anda memilih \"Reset-Down”, Anda memperoleh hasil jika spot akhir lebih rendah dari spot awal atau spot pada waktu reset. ",
     "2145690912": "Pendapatan Produktif",
+    "2145995536": "Create new account",
     "2146336100": "dalam teks %1 dapatkan %2",
     "2146892766": "Pengalaman trading opsi Binary",
     "-2024100696": "Riil Sintetis",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Layanan trading keuangan yang ditawarkan pada situs web ini hanya cocok bagi pelanggan yang menerima kenyataaan dimana mereka mungkin akan kehilangan semua dana yang telah diinvestasikan dan yang memahami serta memiliki pengalaman dengan risiko yang terlibat pada pembelian kontrak keuangan. Bertransaksi pada kontrak keuangan sangat berisiko. Jika kontrak yang Anda beli tidak menghasilkan, maka Anda akan kehilangan seluruh investasi Anda, termasuk harga beli kontrak.",
     "-1970096931": "Akun Anda akan didaftarkan pada Deriv (Europe) Limited, diatur oleh Otoritas Jasa Keuangan Malta, dan akan tunduk pada hukum yang berlaku di negara Malta.",
     "-1988735853": "Akun Anda akan didaftarkan pada Deriv Investments (Europe) Limited, yang diatur oleh Otoritas Jasa Keuangan Malta (MFSA) dan akan tunduk pada yurisdiksi dan hukum yang berlaku di negara Malta.",
-    "-2068229627": "Saya bukan PEP, dan saya belum menjadi PEP dalam tempo 12 bulan terakhir.",
     "-1125193491": "Tambahkan akun",
+    "-2068229627": "Saya bukan PEP, dan saya belum menjadi PEP dalam tempo 12 bulan terakhir.",
     "-763249420": "{{page_title}} halaman ini hanya<0 />tersedia untuk klien yang sudah mendaftar.",
     "-207063174": "Jika Anda memiliki akun aktif, silakan <0>Masuk</0> untuk mendapat akses penuh. Jika tidak, silahkan <1>Daftar</1> untuk memulai trading.",
     "-2139303636": "Anda mungkin telah mengikuti tautan yang rusak, atau halaman tersebut telah pindah ke alamat baru.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "Panjang kata sandi adalah antara 8 hingga 25 karakter.",
     "-1776746512": "Kata sandi saat ini dan kata sandi baru tidak boleh sama.",
     "-1465674403": "Ubah kata sandi Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
     "-1868608634": "Kata sandi saat ini",
     "-89973258": "Kirim ulang email dalam {{seconds}}",
     "-1617352279": "Email masuk ke dalam folder spam Anda (Terkadang email masuk kesana).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Kebijakan keluhan ini dapat berubah dari waktu ke waktu, berlaku untuk akun Anda yang terdaftar pada Deriv Investments (Europe) Limited.",
     "-974989415": "Kebijakan keluhan ini dapat berubah dari waktu ke waktu, berlaku untuk akun Anda yang terdaftar pada Deriv (SVG) LLC dan Deriv (FX) Ltd.",
     "-1639808836": "Jika Anda tidak puas dengan hasilnya, Anda dapat menyambung keluhan Anda ke <0>Independent Betting Adjudication Service (IBAS)</0> dengan mengisi formulir nonlitigasi IBAS. Mohonn diketahui bahwa IBAS hanya berkaitan dengan sengketa yang dihasilkan dari transaksi.",
-    "-257890048": "<0/><1/>Sebagai alternatif, Anda dapat mengirimkan keluhan Anda ke platform <2>Penyelesaian Sengketa Online Komisi Eropa (ODR)</2>.",
     "-1505742956": "<0/><1/>Anda juga dapat merujuk sengketa Anda ke Otoritas Jasa Keuangan Malta via <2>Unit Pendukung Pelanggan</2>.",
     "-1406192787": "Jika Anda tidak puas dengan keputusan yang diperoleh, Anda dapat melanjutkan keluhan Anda pada <0>Komisi Keuangan</0>.",
     "-1776547326": "<0/><1/>Jika Anda berdomisili di Inggris dan Anda tidak puas dengan tanggapan kami, Anda dapat melanjutkan keluhan Anda ke <2>Layanan Finansial Ombudsman</2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "Kata sandi diubah",
     "-2042845290": "Kata sandi investor Anda telah diubah.",
     "-1882295407": "Kata sandi Anda telah diubah.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
     "-254497873": "Gunakan kata sandi ini untuk memberikan tampilan akses pada pengguna lain. Meskipun mereka dapat melihat akun trading Anda, mereka tidak akan dapat bertrading atau mengambil tindakan lainnya.",
     "-161656683": "Kata sandi investor saat ini",
     "-374736923": "Kata sandi investor baru",
     "-1793894323": "Membuat atau mengatur ulang kata sandi investor",
     "-1444706724": "Mengelola kata sandi akun Riil DMT5 {{account_title}}",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
     "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "Pilih server untuk akun DMT5 {{ account_type }} Anda",
     "-1752211105": "Transfer sekarang",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Batas keluar <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> of (<1/> * {{multiplier}})",
     "-1043117679": "Ketika kerugian Anda saat ini sama atau melebihi {{stop_out_percentage}}% dari modal, kontrak Anda akan ditutup pada harga aset terdekat yang tersedia.",
-    "-1686434406": "Keuntungan Anda adalah persentase perubahan harga pasar dikalikan jumlah modal dan multiplier yang dipilih.",
     "-477998532": "Kontrak Anda ditutup secara otomatis ketika kerugian Anda lebih dari atau sama dengan jumlah berikut.",
     "-243332856": "Statistik digit terakhir pada 1000 tik terkini {{ underlying_name }}",
     "-1675848843": "Error",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Membaca properti yang dipilih dari daftar rincian kontrak",
     "-2012970860": "Blok ini memberi Anda informasi tentang kontrak terakhir Anda.",
     "-985351204": "Trading lagi",
-    "-1155426882": "Blok ini akan mentransfer kontrol pada blok kondisi Pembelian.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Blok ini akan mengalihkan kontrol kembali ke blok kondisi Pembelian, memungkinkan Anda untuk membeli kontrak lain.",
     "-403103225": "restart",
     "-837044282": "Harga Permintaan {{ contract_type }}",
