--- a/public/i18n/pl.json
+++ b/public/i18n/pl.json
@@ -80,6 +80,7 @@
     "165682516": "Jeśli nie masz nic przeciwko, powiedz nam, jakich innych platform inwestycyjnych używasz.",
     "170185684": "Ignoruj",
     "171307423": "Odzyskiwanie",
+    "171683420": "Reset main password",
     "176319758": "Całkowita maks. stawka w ciągu 30 dni",
     "176654019": "100 000 $ - 250 000 $",
     "179083332": "Data",
@@ -237,6 +238,8 @@
     "438067535": "Ponad 500 000 $",
     "440529960": "Ustaw swoje hasło",
     "442520703": "250 001$ - 500 000 $",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Zaprzeczenie logiczne",
     "451852761": "Kontynuuj na swoim telefonie",
     "452054360": "Podobnie jak RSI, ten blok daje listę wartości dla każdej pozycji na liście wejściowej.",
@@ -248,6 +251,7 @@
     "462079779": "Brak możliwości odsprzedaży",
     "463361726": "Wybierz element",
     "465993338": "Oscar's Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Wymagany jest podanie nazwiska",
     "473154195": "Ustawienia",
     "475492878": "Wypróbuj wskaźniki syntetyczne",
@@ -305,6 +309,7 @@
     "565410797": "Poniższa grafika przedstawia jak działają bloki macierzy średniej prostej kroczącej:",
     "566274201": "1. Rynek",
     "567019968": "Zmienna to jedna z najważniejszych i najbardziej zaawansowanych składowych tworzenia botów. Jest sposobem przechowywania informacji w formie tekstowej i liczbowej. Informacje, które są przechowywane jako zmienna, można użyć i zmienić zgodnie z określonymi instrukcjami. Zmienna może być nazwana w dowolny sposób, ale zazwyczaj posiadają symboliczne nazwy, dzięki którym można je łatwo odnaleźć przy stosowaniu instrukcji.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "Czy świeca {{ input_candle }} jest czarna?",
     "577215477": "liczy z {{ variable }} od {{ start_number }} do {{ end_number }} o {{ step_size }}",
     "577779861": "Wypłata",
@@ -337,7 +342,6 @@
     "626175020": "Mnożnik odchylenia standardowego w górę {{ input_number }}",
     "626809456": "Prześlij ponownie",
     "627292452": "<0>Twój dokument potwierdzający tożsamość lub dane adresowe</0> nie spełnił naszych wymogów. Wysłaliśmy dalsze instrukcje drogą e-mailową.",
-    "627526394": "Teraz wystarczy Ci tylko jedno hasło",
     "627814558": "Ten blok zwraca wartość, kiedy warunek jest prawdziwy. Użyj tego bloku w ramach powyższych bloków funkcji.",
     "629145209": "Jeśli zostanie wybrane działanie „ORAZ”, blok zwróci wartość „Prawda”, tylko jeśli obie określone wartości będą miały wartość „Prawda”",
     "632398049": "Ten blok przydziela wartość zerową dla elementu lub twierdzenia.",
@@ -365,6 +369,7 @@
     "654924603": "Martingale",
     "657325150": "Ten blok jest używany w celu określenia opcji handlowych w ramach parametrów handlowych bloku źródłowego. Niektóre opcje mają zastosowanie tylko w odniesieniu do niektórych rodzajów kontraktów. Parametry takie jak czas trwania i stawka są typowe dla większości rodzajów zakładów. Przewidywanie stosuje się w przypadku takich zakładów jak Cyfry, a limity stosuje się w przypadku zakładów takich jak: Osiągnie/nie osiągnie, Zakończy się w/poza itp.",
     "660481941": "Aby uzyskać dostęp do swoich aplikacji mobilnych i do aplikacji stron trzecich, musisz najpierw wygenerować token API.",
+    "660991534": "Finish",
     "662609119": "Pobierz aplikację dla systemu MT5",
     "663124295": "Dostępność",
     "665872465": "W poniższym przykładzie wybrana jest cena otwarcia, która następnie jest przypisana do zmiennej o nazwie „op”.",
@@ -481,7 +486,6 @@
     "851508288": "Ten blok ogranicza określoną liczbę do wybranego zakresu.",
     "852583045": "Ciąg listy ticków",
     "854399751": "Kod cyfrowy może zawierać tylko cyfry.",
-    "856713568": "Zbyt wiele nieudanych prób",
     "857986403": "zrób coś",
     "860319618": "Turystyka",
     "862283602": "Numer telefonu*",
@@ -658,7 +662,6 @@
     "1134879544": "Przykład prześwietlonego dokumentu",
     "1143730031": "Kierunek to {{ direction_type }}",
     "1144028300": "Szereg wskaźnika względnej siły (RSIA)",
-    "1144288893": "Zaktualizowaliśmy nasz system, aby umożliwić obsługiwanie jednego, bardziej bezpiecznego hasła na Deriv. Po ustanowieniu nowego hasła możesz używać go do logowania na wszystkie swoje konta Deriv i DMT5.",
     "1145927365": "Uruchom bloki wewnętrzne po określonej liczbie sekund",
     "1151964318": "obie strony",
     "1154021400": "lista",
@@ -813,7 +816,6 @@
     "1367023655": "Aby zapewnić, że Twoje straty nie przekroczą Twojej stawki, Twój kontrakt zostanie zamknięty automatycznie, kiedy Twoja strata wyniesie <0/>.",
     "1367488817": "4. Warunki zrestartowania handlowania",
     "1367990698": "Wskaźnik zmienności 10",
-    "1368002992": "Przejdź do ustawień",
     "1369709538": "Nasze warunki użytkowania",
     "1371193412": "Anuluj",
     "1371641641": "Otwórz link na swoim urządzeniu",
@@ -925,7 +927,6 @@
     "1534796105": "Pobiera wartość zmiennej",
     "1539108340": "Indeks EUR",
     "1540585098": "Odrzuć",
-    "1541818425": "Zresetuj hasło",
     "1541969455": "Oba",
     "1544642951": "Jeśli wybierzesz Tylko wzrosty, zyskasz wygraną, gdy następujące po sobie zmiany ceny są zmianami w górę po punkcie wejściowym. Wypłata nie przysługuje, jeśli cena spada lub jest równa dowolnej poprzedniej zmianie ceny.",
     "1549098835": "Wypłaty ogółem",
@@ -1136,7 +1137,6 @@
     "1903437648": "Wykryto zamazane zdjęcie",
     "1905032541": "Mamy już wszystko, aby zweryfikować Twoją tożsamość",
     "1906639368": "Jeśli próbujesz utworzyć hasło pierwszy raz lub nie pamiętasz hasła, zresetuj je.",
-    "1908023954": "Przepraszamy, podczas przetwarzania żądania wystąpił błąd.",
     "1908239019": "Upewnij się, że całość dokumentu jest na zdjęciu",
     "1909769048": "mediana",
     "1914014145": "Dzisiaj",
@@ -1238,7 +1238,6 @@
     "2054500647": "Polityka składania skarg, która może ulegać zmianom co jakiś czas, ma zastosowanie w odniesieniu do Twoich kont zarejestrowanych przez Deriv (SVG) LLC oraz Deriv (V) Ltd.",
     "2054889300": "Utwórz „%1”",
     "2055317803": "Skopiuj link do przeglądarki na swoim urządzeniu mobilnym",
-    "2056801626": "Potwierdź swoje hasło",
     "2057419639": "Punkt wyjściowy",
     "2062912059": "funkcja {{ function_name }} {{ function_params }}",
     "2063655921": "W przypadku zakupu kontraktu Zamknięcia-na-Niską zyskasz wypłatę o wartości mnożnika pomnożonego przez różnicę wartości ceny zamknięcia i niskiej w okresie trwania kontraktu.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Błąd zakupu",
     "2144609616": "Jeśli wybierzesz „Reset-Down”, zdobędziesz wypłatę, gdy punkt wyjściowy będzie znacząco niższy niż punkt wejściowy lub punkt spot w momencie resetowania.",
     "2145690912": "Uzyskanie dochodu",
+    "2145995536": "Create new account",
     "2146336100": "w tekście %1 uzyskaj %2",
     "2146892766": "Doświadczenie w handlowaniu opcjami binarnymi",
     "-2024100696": "Prawdziwe syntetyczne",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Usługi zawierania transakcji finansowych oferowane na niniejszym portalu są odpowiednie tylko dla klientów, którzy akceptują możliwość straty wszystkich zainwestowanych pieniędzy i którzy rozumieją ryzyko związane z zakupem kontraktów finansowych i mają doświadczenie w tym zakresie. Takie transakcje finansowe niosą ze sobą wysokie ryzyko. Jeśli zakupione przez Ciebie kontrakty zakończą się bez wartości, stracisz całą zainwestowaną sumę, która obejmuje premię z kontraktu.",
     "-1970096931": "Twoje konto zostanie otwarte przez Deriv (Europe) Limited, regulowaną przez Urząd ds. Gier Hazardowych: Malta Gaming Authority na Malcie, i będzie podlegać prawu Malty.",
     "-1988735853": "Twoje konto zostanie otwarte przez Deriv Investments (Europe) Limited, regulowaną przez Urząd ds. Usług Finansowych na Malcie: Malta Financial Services Authority (MFSA) i będzie podlegało prawu Malty.",
-    "-2068229627": "Nie jestem osobą zajmującą eksponowane stanowiska polityczne i nie byłem/am taką osobą w ciągu ostatnich 12 miesięcy.",
     "-1125193491": "Dodaj konto",
+    "-2068229627": "Nie jestem osobą zajmującą eksponowane stanowiska polityczne i nie byłem/am taką osobą w ciągu ostatnich 12 miesięcy.",
     "-763249420": "Stron {{page_title}} jest dostępna tylko<0 />dla istniejących klientów.",
     "-207063174": "Jeśli masz aktywne konto, <0>zaloguj się</0>, aby uzyskać pełny dostęp. W przeciwnym razie <1>zarejestruj się</1>, aby rozpocząć handlowanie.",
     "-2139303636": "Być może kliknąłeś/kliknęłaś błędny link lub strona została przeniesiona pod nowy adres.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "Hasło powinno składać się z 8-25 znaków.",
     "-1776746512": "Obecne hasło i nowe hasło nie mogą być takie same.",
     "-1465674403": "Zmień swoje hasło Deriv",
-    "-1233938428": "Zalecamy używanie unikalnego hasła — takiego, które nie jest używane na żadnej innej stronie.",
     "-1868608634": "Obecne hasło",
     "-89973258": "Wyślij wiadomość ponownie za {{seconds}}sek.",
     "-1617352279": "Wiadomość e-mail trafiła do folderu spam (czasami wiadomości się tam gubią).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Polityka składania skarg, która może ulegać zmianom co jakiś czas, ma zastosowanie w odniesieniu do Twoich kont zarejestrowanych przez Deriv Investments (Europe) Limited.",
     "-974989415": "Polityka składania skarg, która może ulegać zmianom co jakiś czas, ma zastosowanie w odniesieniu do Twoich kont zarejestrowanych przez Deriv (SVG) LLC oraz Deriv (FX) Ltd.",
     "-1639808836": "Jeśli nie satysfakcjonuje Cię rezultat postępowania, możesz zgłosić swoją skargę do instytucji <0>Independent Betting Adjudication Service (IBAS)</0>, wypełniając formularz arbitrażowy. Należy pamiętać, że IBAS zajmuje się tylko sporami, które są związane z transakcjami.",
-    "-257890048": "<0/><1/>Możesz również wysłać swoją skargę przez platformę Komisji Europejskiej do <2>Rozstrzygania Sporów On-line (ODR)</2>.",
     "-1505742956": "<0/><1/>Możesz też skierować swój spór do Urzędu ds. Gier Hazardowych: Malta Gaming Authority przez <2>Jednostkę wsparcia gracza</2>.",
     "-1406192787": "Jeśli nie zadowala Cię rezultat, możesz przekazać skargę do <0>Komisji Finansowej</0>.",
     "-1776547326": "<0/><1/>Jeśli jesteś mieszkańcem Wielkiej Brytanii i nie satysfakcjonuje Cię nasza odpowiedź, możesz skierować skargę do Rzecznika praw obywatelskich ds. usług finansowych (<2>Financial Ombudsman Service</2>).",
@@ -2203,15 +2201,11 @@
     "-382495564": "Zmieniono hasło",
     "-2042845290": "Twoje hasło inwestora zostało zmienione.",
     "-1882295407": "Twoje hasło zostało zmienione.",
-    "-985529779": "Twoje hasło DMT5 jest teraz takie samo jak hasło do logowania do konta Deriv. Aby je zresetować, przejdź do strony <0>Ustawienia</0> i zmień swoje hasło.",
     "-254497873": "Użyj tego hasła, aby udzielić innemu użytkownikowi prawa podglądu. Będzie mógł zobaczyć Twoje konto handlowe, ale nie będzie mieć możliwości handlowania ani wykonania innych działań.",
     "-161656683": "Obecne hasło inwestora",
     "-374736923": "Nowe hasło inwestora",
     "-1793894323": "Utwórz lub resetuj hasło inwestora",
     "-1444706724": "Zarządzaj hasłem do prawdziwego kontaDMT5 {{account_title}}",
-    "-1234339445": "Teraz wystarczy Ci tylko jedno hasło",
-    "-1418023997": "Niedostępność z powodu zbyt wielu nieudanych prób. Spróbuj ponownie za minutę lub zresetuj hasło do konta, aby kontynuować.",
-    "-140300511": "Potwierdź swoje hasło Deriv, aby utworzyć konto DMT5. Jeśli nie pamiętasz swojego hasła, kliknij <0>Resetuj hasło</0>.",
     "-1987408434": "Twoje konto finansowe MT5 STP zostanie otwarte przez Deriv (BVI) Ltd. Handlowanie na tym koncie podlega przepisom i zaleceniom Komisji ds. Usług Finansowych Brytyjskich Wysp Dziewiczych: British Virgin Islands Financial Services Commission (BVIFSC). Żadne inne Twoje konta, również konto Deriv, nie podlegają pod regulacje i zalecenia Komisji ds. Usług Finansowych Brytyjskich Wysp Dziewiczych: British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "Wybierz serwer dla swojego konta DMT5 {{ account_type }}",
     "-1752211105": "Przelej teraz",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Stop out <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> z (<1/> * {{multiplier}})",
     "-1043117679": "Gdy Twoje bieżące straty zrównają się z {{stop_out_percentage}}% Twojej stawki lub przewyższą tę wartość, Twój kontrakt zostanie zamknięty po najbliższej dostępnej cenie aktywa.",
-    "-1686434406": "Twój zysk to procentowa zmiana ceny rynkowej pomnożona przez Twoją stawkę i mnożnik wybrany tutaj.",
     "-477998532": "Twój kontrakt zostanie automatycznie zamknięty, gdy Twoja strata będzie równa tej kwocie lub wyższa od niej.",
     "-243332856": "Statystyki ostatnich cyfr dla ostatnich 1000 ticków dla {{ underlying_name }}",
     "-1675848843": "Błąd",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Wczytuje wybraną właściwość z listy szczegółów kontraktu",
     "-2012970860": "Ten blok zapewnia Ci informacje o ostatnim kontrakcie.",
     "-985351204": "Handluj ponownie",
-    "-1155426882": "Te bloki przenoszą kontrolę na blok Warunki zakupu.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Ten blok przeniesie kontrolę z powrotem na blok Warunki zakupu, umożliwiając Ci zakup kolejnego kontraktu.",
     "-403103225": "restartuj",
     "-837044282": "Cena zakupu {{ contract_type }}",
