--- a/public/i18n/ru.json
+++ b/public/i18n/ru.json
@@ -80,6 +80,7 @@
     "165682516": "Если вы не против, поделитесь, какие другие торговые платформы вы используете?",
     "170185684": "Игнорировать",
     "171307423": "Восстановление",
+    "171683420": "Reset main password",
     "176319758": "Макс. общая ставка за 30 дней",
     "176654019": "$100 000 - $250 000",
     "179083332": "Дата",
@@ -237,6 +238,8 @@
     "438067535": "Более $500 000",
     "440529960": "Установите пароль",
     "442520703": "$250 001 - $500 000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Логическое отрицание",
     "451852761": "Продолжить на телефоне",
     "452054360": "Как и RSI, этот блок отображает список значений для каждой записи во входном списке.",
@@ -248,6 +251,7 @@
     "462079779": "Продажа не предлагается",
     "463361726": "Выберите элемент",
     "465993338": "Оскар Грайнд",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Необходимо указать фамилию",
     "473154195": "Настройки",
     "475492878": "Попробуйте Синтетические индексы",
@@ -305,6 +309,7 @@
     "565410797": "Изображение ниже показывает, как работает блок массива простых СС:",
     "566274201": "1. Рынок",
     "567019968": "Переменная является одним из наиболее важных и мощных компонентов при создании бота. Это способ хранения информации в виде текста или чисел. Информация, хранящаяся как переменная, может использоваться и изменяться в соответствии с заданными инструкциями. Переменным может быть присвоено любое имя, но обычно им присваиваются полезные символические имена, чтобы их было проще вызывать во время выполнения инструкций.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "Свеча {{ input_candle }} черная?",
     "577215477": "подсчитать с {{ variable }} от {{ start_number }} до {{ end_number }} по {{ step_size }}",
     "577779861": "Вывод",
@@ -337,7 +342,6 @@
     "626175020": "Стандартное отклонение вверх Множитель {{ input_number }}",
     "626809456": "Отправить повторно",
     "627292452": "<0>Ваше подтверждение личности и адреса</0> не соответствует нашим требованиям. Пожалуйста, проверьте свою электронную почту. Мы отправили вам дальнейшие инструкции.",
-    "627526394": "Теперь вам нужен всего один пароль",
     "627814558": "Этот блок возвращает значение, когда условие верно. Используйте этот блок в любом из функциональных блоков выше.",
     "629145209": "В случае, если выбрана операция «И», блок возвращает «Верно», только если оба заданных значения «Верны»",
     "632398049": "Этот блок присваивает нулевое значение элементу или инструкции.",
@@ -365,6 +369,7 @@
     "654924603": "Мартингейл",
     "657325150": "Этот блок используется для того, чтобы задать параметры в корневом блоке Параметры контракта. Некоторые параметры применимы только для определенных типов контрактов. Такие параметры, как длительность и ставка, являются общими для большинства типов контрактов. Прогнозирование используется для Цифровых контрактов, в то время как смещения барьеров предназначены для типов контрактов, которые включают в себя барьеры, такие как Касание/Нет касания, Закончится внутри/Вне и т.д.",
     "660481941": "Чтобы получить доступ к мобильным приложениям и другим сторонним приложениям, вам сначала необходимо сгенерировать ключ API.",
+    "660991534": "Finish",
     "662609119": "Загрузить приложение MT5",
     "663124295": "Доступно",
     "665872465": "В приведенном ниже примере выбирается цена открытия, которая затем присваивается переменной с именем \"цо\".",
@@ -481,7 +486,6 @@
     "851508288": "Этот блок ограничивает заданное число в пределах установленного диапазона.",
     "852583045": "Строка Списка Тиков",
     "854399751": "Цифровой код должен содержать только цифры.",
-    "856713568": "Слишком много неудачных попыток",
     "857986403": "сделай что-нибудь",
     "860319618": "Туризм",
     "862283602": "Номер телефона*",
@@ -658,7 +662,6 @@
     "1134879544": "Пример документа с бликами",
     "1143730031": "Направление - {{ direction_type }}",
     "1144028300": "Массив индексов относительной силы (RSIA)",
-    "1144288893": "Наша обновленная система позволяет вам пользоваться единым, более безопасным паролем на всем Deriv. Установите новый пароль и используйте его для входа на все свои счета Deriv и DMT5.",
     "1145927365": "Запустить блоки, находящиеся внутри, через указанное количество секунд",
     "1151964318": "обе стороны",
     "1154021400": "список",
@@ -813,7 +816,6 @@
     "1367023655": "Чтобы ваши потери не превышали размер ставки, контракт будет автоматически закрыт, если потери станут равны <0/>.",
     "1367488817": "4. Перезапустить торговые условия",
     "1367990698": "Индекс волатильн. 10",
-    "1368002992": "Go to Settings",
     "1369709538": "Наши условия использования",
     "1371193412": "Отменить",
     "1371641641": "Откройте ссылку на своем телефоне",
@@ -925,7 +927,6 @@
     "1534796105": "Получает значение переменной",
     "1539108340": "EUR Index",
     "1540585098": "Отклонить",
-    "1541818425": "Изменить пароль",
     "1541969455": "Оба",
     "1544642951": "Выбрав \"Только вверх\", вы получите выплату, если несколько тиков подряд будут расти по отношению к котировке на входе. Если любой тик покажет снижение или будет равен одному из предыдущих тиков, вы не получите выплату.",
     "1549098835": "Общая сумма вывода",
@@ -1136,7 +1137,6 @@
     "1903437648": "Обнаружена размытая фотография",
     "1905032541": "Теперь мы готовы подтвердить вашу личность",
     "1906639368": "Если вы впервые пытаетесь создать пароль или забыли свой пароль, пожалуйста, сбросьте его.",
-    "1908023954": "Извините, при обработке вашего запроса возникла ошибка.",
     "1908239019": "Убедитесь, что на фото весь документ",
     "1909769048": "медиана",
     "1914014145": "Сегодня",
@@ -1238,7 +1238,6 @@
     "2054500647": "Данная политика рассмотрения жалоб, которая может время от времени меняться, применяется к вашему счету(-ам), открытому в Deriv (SVG) LLC и Deriv (V) Ltd.",
     "2054889300": "Создать \"%1\"",
     "2055317803": "Скопируйте ссылку в браузер своего телефона",
-    "2056801626": "Confirm your password",
     "2057419639": "Выходная котировка",
     "2062912059": "функция {{ function_name }} {{ function_params }}",
     "2063655921": "Покупая контракт \"Закрытие-Мин.\", вы выиграете разницу между ценой закрытия и минимальной ценой, достигнутой в период действия контракта, умноженную на выбранный мультипликатор.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Ошибка покупки",
     "2144609616": "Если вы выбираете \"Reset-Вниз\", вы получаете выплату, если спот-котировка на выходе будет строго ниже входной спот-котировки или котировки на момент Reset.",
     "2145690912": "Заработок",
+    "2145995536": "Create new account",
     "2146336100": "в тексте %1 получить %2",
     "2146892766": "Опыт торговли бинарными опционами",
     "-2024100696": "Реальный Синтетический",
@@ -1309,7 +1309,7 @@
     "-1575567374": "почтовый код/индекс",
     "-755626951": "Заполните ваши адресные данные",
     "-1024240099": "Адрес",
-    "-584911871": "Select wallet currency",
+    "-584911871": "Выберите валюту кошелька",
     "-1461267236": "Пожалуйста, выберите валюту",
     "-1352330125": "ВАЛЮТА",
     "-1027595143": "Менее $25 000",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Финансовые услуги, предоставляемые на этом сайте, подходят только для клиентов, готовых нести ответственность за возможную потерю всех инвестированных средств, а также осознающих все риски и имеющих опыт покупки финансовых контрактов. Заключение сделок на финансовых контрактах предполагает высокий уровень риска. Если приобретённые контракты истекут, не принеся прибыли, вы потеряете всю инвестированную сумму.",
     "-1970096931": "Ваш счет будет открыт в компании Deriv (Europe) Limited. Компания регулируется мальтийским управлением по азартным играм и подчиняется законодательству Мальты.",
     "-1988735853": "Ваш счет будет открыт в компании Deriv Investments (Europe) Limited. Компания находится под юрисдикцией мальтийского управления финансовых услуг (MFSA) и подчиняется законодательству Мальты.",
-    "-2068229627": "Я не являюсь ПЗЛ и не являлся ПЗЛ в течение последних 12 месяцев.",
     "-1125193491": "Добавить счёт",
+    "-2068229627": "Я не являюсь ПЗЛ и не являлся ПЗЛ в течение последних 12 месяцев.",
     "-763249420": "Страница {{page_title}} доступна<0 />только для клиентов.",
     "-207063174": "Если у вас есть активный счет, <0>Войдите</0> для получения полного доступа. В противном случае, пожалуйста, <1>зарегистрируйтесь</1>, чтобы начать торговлю.",
     "-2139303636": "Возможно, вы перешли по нерабочей ссылке или у страницы изменился адрес.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "Длина пароля должна быть от 8 до 25 символов.",
     "-1776746512": "Текущий пароль и новый пароль не могут совпадать.",
     "-1465674403": "Изменить пароль Deriv",
-    "-1233938428": "Мы рекомендуем использовать уникальный пароль — тот, который вы не используете для других сайтов.",
     "-1868608634": "Текущий пароль",
     "-89973258": "Повторно отправить письмо через {{seconds}}сек.",
     "-1617352279": "Письмо находится в папке со спамом (иногда письма попадают туда).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Данная политика рассмотрения жалоб, которая может время от времени меняться, применяется к вашему счету, открытому в Deriv Investments (Europe) Limited.",
     "-974989415": "Данная политика рассмотрения жалоб, которая может время от времени меняться, применяется к вашему счету(-ам), открытому в Deriv (SVG) LLC и Deriv (FX) Ltd.",
     "-1639808836": "Если вы не удовлетворены результатом, вы можете передать свою жалобу в независимый сервис <0>Independent Betting Adjudication Service (IBAS)</0>, заполнив соответствующую заявку на рассмотрение. Обратите внимание, что IBAS занимается только спорами, возникающими из-за транзакций.",
-    "-257890048": "<0/><1/>Вы также можете отправить свою жалобу на платформу <2>Онлайн-урегулирования споров (ODR)</2> Европейской Комиссии.",
     "-1505742956": "<0/><1/>Вы можете передать свой спор в Управление по азартным играм Мальты через <2>Отдел поддержки игроков</2>.",
     "-1406192787": "Если вы не удовлетворены нашим решением, вы можете передать жалобу в <0>Финансовую комиссию</0>.",
     "-1776547326": "<0/><1/>Если вы проживаете в Великобритании и недовольны нашим ответом, вы можете передать свою жалобу в службу <2>финансового омбудсмена</2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "Пароль изменен",
     "-2042845290": "Ваш инвесторский пароль изменен.",
     "-1882295407": "Ваш пароль изменен.",
-    "-985529779": "Ваш пароль DMT5 теперь совпадает с паролем для входа на счет Deriv. Перейдите на страницу <0>Настройки</0>, если хотите сбросить пароль.",
     "-254497873": "Используйте этот пароль, чтобы предоставить другому пользователю доступ к просмотру. Они смогут просматривать ваш счет, но не смогут торговать или совершать какие-либо другие действия.",
     "-161656683": "Текущий инвесторский пароль",
     "-374736923": "Новый инвесторский пароль",
     "-1793894323": "Создать или сбросить инвесторский пароль",
     "-1444706724": "Управление паролем реального счета {{account_title}} DMT5",
-    "-1234339445": "Теперь вам нужен всего один пароль",
-    "-1418023997": "Недоступно из-за большого количества неудачных попыток. Повторите попытку через минуту или сбросьте пароль счета, чтобы продолжить.",
-    "-140300511": "Подтвердите пароль Deriv, чтобы открыть счет DMT5. Если вы забыли свой пароль, нажмите <0>Сбросить пароль</0>.",
     "-1987408434": "Ваш счет MT5 Финансовый STP будет открыт в Deriv (BVI) Ltd. Все операции на этом счете регулируются правилами и руководящими принципами Комиссии по финансовым услугам Британских Виргинских островов (BVIFSC). Правила и принципы Комиссии по финансовым услугам Британских Виргинских островов (BVIFSC) не распространяются ни на один из ваших других счетов, включая ваш счет Deriv.",
     "-1281078994": "Выберите сервер для вашего счета DMT5 {{ account_type }}",
     "-1752211105": "Перевести сейчас",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Стоп-аут <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> от (<1/> * {{multiplier}})",
     "-1043117679": "Когда ваш текущий убыток станет равен или превысит {{stop_out_percentage}}% вашей ставки, контракт будет закрыт по ближайшей доступной цене актива.",
-    "-1686434406": "Ваша прибыль - это процентное изменение рыночной цены, умноженное на вашу ставку и выбранный мультипликатор.",
     "-477998532": "Ваш контракт будет автоматически закрыт, когда убыток достигнет или превысит это значение.",
     "-243332856": "Статистика последней десятичной последних 1000 тиков для {{ underlying_name }}",
     "-1675848843": "Ошибка",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Считывает выбранный параметр из списка Деталей контракта",
     "-2012970860": "Этот блок отображает информацию о последнем контракте.",
     "-985351204": "Торговать снова",
-    "-1155426882": "Этот блок передает управление блоку условий покупки.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Этот блок вернет управление блоку условий покупки, что позволит вам приобрести другой контракт.",
     "-403103225": "перезапустить",
     "-837044282": "Цена аск {{ contract_type }}",
