--- a/public/i18n/th.json
+++ b/public/i18n/th.json
@@ -80,6 +80,7 @@
     "165682516": "หากคุณไม่ว่าอะไร ช่วยบอกได้ไหมว่ามีแพลตฟอร์มอื่นอีกไหมที่คุณใช้ในการซื้อขาย?",
     "170185684": "ละเลย",
     "171307423": "กู้คืน",
+    "171683420": "Reset main password",
     "176319758": "รวมเงินเดิมพันสูงสุด 30 วัน",
     "176654019": "$100,000 - $250,000",
     "179083332": "วันที่",
@@ -237,6 +238,8 @@
     "438067535": "มากกว่า $500,000",
     "440529960": "ตั้งรหัสผ่านของคุณ",
     "442520703": "$250,001 - $500,000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "การปฏิเสธตรรกะ",
     "451852761": "ดำเนินการต่อในโทรศัพท์ของคุณ",
     "452054360": "คล้ายกับ RSI บล็อกนี้จะแสดงรายการค่าสําหรับแต่ละรายการในรายการอินพุต",
@@ -248,6 +251,7 @@
     "462079779": "การขายไม่ได้ถูกนำเสนอ",
     "463361726": "เลือกรายการ",
     "465993338": "ออสการ์บด",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "โปรดระบุนามสกุล",
     "473154195": "การตั้งค่า",
     "475492878": "ลองดัชนีสังเคราะห์",
@@ -305,6 +309,7 @@
     "565410797": "ภาพด้านล่างอธิบายให้เห็นว่าบล็อก Simple Moving Average Array ทำงานอย่างไร",
     "566274201": "1. ตลาด",
     "567019968": "ตัวแปรเป็นหนึ่งในองค์ประกอบที่สำคัญที่สุดและมีประสิทธิภาพในการสร้างบอท เนื่องจากเป็นวิธีการเก็บข้อมูลไม่ว่าจะเป็นข้อความหรือตัวเลข ข้อมูลที่เก็บไว้เป็นตัวแปรสามารถใช้และเปลี่ยนแปลงตามคําแนะนําที่กําหนด ตัวแปรสามารถใช้ชื่ออะไรก็ได้ แต่ปกติจะใช้ชื่อเป็นสัญลักษณ์ เพื่อง่ายต่อการเรียกใช้งานในระหว่างดำเนินการตามคำสั่ง",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "แท่งเทียน {{ input_candle }} สีดำหรือไม่?",
     "577215477": "นับด้วย {{ variable }} จาก {{ start_number }} ถึง {{ end_number }} โดย {{ step_size }}",
     "577779861": "ถอนเงิน",
@@ -337,7 +342,6 @@
     "626175020": "ส่วนเบี่ยงเบนมาตรฐานตัวคูณขึ้น {{ input_number }}",
     "626809456": "ส่งอีกครั้ง",
     "627292452": "<0>หลักฐานยืนยันตัวตนหรือหลักฐานยืนยันที่อยู่ของคุณ</0> ไม่เป็นไปตามข้อกำหนดของเรา โปรดตรวจสอบอีเมลของคุณสำหรับคำแนะนำเพิ่มเติม",
-    "627526394": "All you need from now is one password",
     "627814558": "บล็อกนี้ส่งคืนค่าเมื่อเงื่อนไขเป็นจริง ใช้บล็อกนี้ภายในบล็อกฟังก์ชันด้านบน",
     "629145209": "ในกรณีที่เลือก \"AND\" การดำเนินการบล็อกจะส่งกลับ \"จริง\" เฉพาะเมื่อทั้งสองค่าที่ระบุเป็น \"จริง\"",
     "632398049": "บล็อกนี้กำหนดค่า Null ให้กับรายการหรือข้อความ",
@@ -365,6 +369,7 @@
     "654924603": "มาร์ติงเกล",
     "657325150": "บล็อกนี้ใช้เพื่อกำหนด ตัวเลือกการซื้อขายภายในรูทบล็อกพารามิเตอร์ซื้อขาย ตัวเลือกบางอย่างสามารถใช้ได้กับการซื้อขายบางประเภทเท่านั้น พารามิเตอร์ เช่น ระยะเวลาและเงินเดิมพันนั้นเป็นเรื่องปกติในประเภทการซื้อขายส่วนใหญ่ การคาดการณ์จะใช้สำหรับประเภทการซื้อขายเช่นตัวเลข ในขณะที่ barrier ใช้สำหรับการซื้อขาย สัมผัส/ไม่สัมผัส สิ้นสุดระหว่าง/สิ้นสุดภายนอก เป็นต้น",
     "660481941": "ในการเข้าถึงแอพมือถือของคุณ และแอพอื่นๆของบุคคลภายนอก คุณจะต้องสร้างโทเคน API ก่อน",
+    "660991534": "Finish",
     "662609119": "ดาวน์โหลดแอพ MT5",
     "663124295": "พร้อมใช้งาน",
     "665872465": "จากตัวอย่างด้านล่าง ราคาเปิดที่เลือก ซึ่งจะถูกกำหนดให้กับตัวแปรที่เรียกว่า \"op\"",
@@ -481,7 +486,6 @@
     "851508288": "บล็อกนี้จำกัดหมายเลขที่กำหนดภายในช่วงที่ตั้งไว้",
     "852583045": "สตริงรายการ Tick",
     "854399751": "รหัสตัวเลขหลักต้องประกอบด้วยตัวเลขเท่านั้น",
-    "856713568": "Too many failed attempt",
     "857986403": "ทําอะไรสักอย่าง",
     "860319618": "การท่องเที่ยว",
     "862283602": "หมายเลขโทรศัพท์*",
@@ -658,7 +662,6 @@
     "1134879544": "ตัวอย่างของเอกสารที่มีแสงจ้า",
     "1143730031": "ทิศทางคือ {{ direction_type }}",
     "1144028300": "Relative Strength Index Array (RSIA)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
     "1145927365": "รันบล็อกข้างในหลังจากจำนวนวินาทีที่กำหนด",
     "1151964318": "ทั้งสองด้าน",
     "1154021400": "รายการ",
@@ -813,7 +816,6 @@
     "1367023655": "เพื่อให้แน่ใจว่าการสูญเสียของคุณจะไม่เกินเงินเดิมพัน สัญญาของคุณจะถูกปิดอัตโนมัติเมื่อการสูญเสียของคุณเท่ากับ <0/>",
     "1367488817": "4. เริ่มเงื่อนไขการซื้อขายใหม่",
     "1367990698": "ดัชนีความผันผวน 10",
-    "1368002992": "Go to Settings",
     "1369709538": "Our terms of use",
     "1371193412": "ยกเลิก",
     "1371641641": "เปิดลิงก์ในโทรศัพท์มือถือของคุณ",
@@ -925,7 +927,6 @@
     "1534796105": "รับค่าตัวแปร",
     "1539108340": "ดัชนี EUR",
     "1540585098": "ปฏิเสธ",
-    "1541818425": "Reset password",
     "1541969455": "ทั้งคู่",
     "1544642951": "หากคุณเลือก \"Only Ups\" คุณจะได้รับเงินก็ต่อเมื่อ ช่วงค่า tick ที่ติดๆกันสูงขึ้นอย่างต่อเนื่อง หลังจากจุดเข้า คุณจะไม่ได้รับเงิน หากค่า tick มีค่าลดลง หรือเท่ากับช่วงค่า tick ก่อนหน้านั้น",
     "1549098835": "ถอนเงินทั้งหมด",
@@ -1136,7 +1137,6 @@
     "1903437648": "ตรวจพบภาพเบลอ",
     "1905032541": "ตอนนี้เราพร้อมแล้วที่จะยืนยันตัวตนของคุณ",
     "1906639368": "หากเป็นครั้งแรกที่คุณพยายามสร้างรหัสผ่านหรือคุณลืมรหัสผ่านของคุณ โปรดรีเซ็ตรหัสผ่าน",
-    "1908023954": "Sorry, an error occurred while processing your request.",
     "1908239019": "โปรดตรวจสอบให้แน่ใจว่า เอกสารทั้งหมดอยู่ในรูปภาพ",
     "1909769048": "มัธยฐาน",
     "1914014145": "วันนี้",
@@ -1238,7 +1238,6 @@
     "2054500647": "นโยบายการร้องเรียนนี้ซึ่งอาจมีการเปลี่ยนแปลงเป็นครั้งคราวใช้กับบัญชีของคุณที่ลงทะเบียนกับ Deriv (SVG) LLC และ Deriv (V) Ltd",
     "2054889300": "สร้าง \"%1\"",
     "2055317803": "คัดลอกลิงก์ไปยังเบราว์เซอร์มือถือของคุณ",
-    "2056801626": "Confirm your password",
     "2057419639": "จุดออก",
     "2062912059": "ฟังก์ชัน {{ function_name }} {{ function_params }}",
     "2063655921": "การซื้อสัญญา \"ปิด-ต่ำ\" คุณจะทำเงินที่ตัวคูณหลายเท่าของความแตกต่างระหว่างค่าปิด และต่ำตลอดระยะเวลาของสัญญา",
@@ -1294,6 +1293,7 @@
     "2143803283": "ข้อผิดพลาดในการซื้อ",
     "2144609616": "หากคุณเลือก \"รีเซ็ตลง” คุณจะได้รับเงินก็ต่อเมื่อ จุดออกมีค่าต่ำกว่าจุดเข้า หรือ จุดที่เวลารีเซ็ต",
     "2145690912": "การรับรายได้",
+    "2145995536": "Create new account",
     "2146336100": "ในข้อความ %1 ได้รับ %2",
     "2146892766": "ประสบการณ์การซื้อขายไบนารีออปชัน",
     "-2024100696": "บัญชีจริง ดัชนีสังเคราะห์",
@@ -1530,8 +1530,8 @@
     "-2073934245": "บริการซื้อขายทางการเงินในเว็บไซต์นี้เหมาะสำหรับลูกค้าที่ยอมรับความเป็นไปได้ของการขาดทุนเงินทั้งหมดที่พวกเขาลงทุนและผู้ที่เข้าใจ และมีประสบการณ์เกี่ยวกับความเสี่ยงที่เกี่ยวข้องกับการซื้อสัญญาทางการเงิน การทำธุรกรรมในสัญญาทางการเงินมีความเสี่ยงสูง หากสัญญาที่คุณซื้อหมดอายุ คุณจะสูญเสียเงินลงทุนทั้งหมด ซึ่งรวมถึงค่าธรรมเนียมของสัญญาดังกล่าวด้วย",
     "-1970096931": "บัญชีของคุณจะถูกเปิดด้วย Deriv (Europe) Limited ได้รับการควบคุมโดย Malta Gaming Authority และจะอยู่ภายใต้กฎหมายของประเทศมอลตา",
     "-1988735853": "บัญชีของคุณจะถูกเปิดด้วย Deriv Investments (Europe) Limited ได้รับการควบคุมโดย Malta Financial Services Authority (MFSA) และอยู่ภายใต้เขตอำนาจศาล และกฎหมายของประเทศมอลตา",
-    "-2068229627": "ฉันไม่ใช่ PEP และฉันไม่ได้เป็น PEP ในช่วง 12 เดือนที่ผ่านมา",
     "-1125193491": "เพิ่มบัญชี",
+    "-2068229627": "ฉันไม่ใช่ PEP และฉันไม่ได้เป็น PEP ในช่วง 12 เดือนที่ผ่านมา",
     "-763249420": "หน้า {{page_title}} ใช้ได้เฉพาะ<0 />สำหรับลูกค้าที่มีอยู่เท่านั้น",
     "-207063174": "หากคุณมีบัญชีที่ใช้งานอยู่ โปรด <0>เข้าสู่ระบบ</0> สำหรับการเข้าถึงแบบเต็ม ไม่เช่นนั้นโปรด <1>ลงทะเบียน</1> เพื่อเริ่มการซื้อขาย",
     "-2139303636": "คุณอาจทำตามขั้นตอนลิงค์ที่ใช้งานไม่ได้ หรือเพจได้ย้ายไปยังที่อยู่ใหม่",
@@ -1618,7 +1618,6 @@
     "-1738671831": "รหัสของคุณควรกรอกตัวอักษรอยู่ระหว่าง 8 ถึง 25 ตัวอักษร",
     "-1776746512": "รหัสผ่านปัจจุบันและรหัสผ่านใหม่ต้องไม่เหมือนกัน",
     "-1465674403": "เปลี่ยนรหัสผ่าน Deriv ของคุณ",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
     "-1868608634": "รหัสผ่านปัจจุบัน",
     "-89973258": "ส่งอีเมลอีกครั้งใน {{seconds}} วินาที",
     "-1617352279": "อีเมลอยู่ในโฟลเดอร์สแปรมของคุณ (บางครั้งบางอย่างอาจหายไปที่นั่น)",
@@ -2022,7 +2021,6 @@
     "-1125272179": "นโยบายการร้องเรียนนี้ อาจมีการเปลี่ยนแปลงเป็นครั้งคราวมีผลบังคับใช้กับบัญชีของคุณที่ลงทะเบียนกับ Deriv Investments (Europe) Limited",
     "-974989415": "นโยบายการร้องเรียนนี้ อาจมีการเปลี่ยนแปลงเป็นครั้งคราวมีผลบังคับใช้กับบัญชีของคุณที่ลงทะเบียนกับ Deriv (SVG) LLC และ Deriv (FX) Ltd",
     "-1639808836": "หากคุณไม่พอใจกับผลลัพธ์คุณสามารถส่งต่อการร้องเรียนของคุณไปที่ <0>บริการตัดสินการเดิมพันอิสระ (IBAS)</0> โดยกรอกแบบฟอร์มการตัดสินของ IBAS โปรดทราบว่า IBAS เกี่ยวข้องกับข้อพิพาทที่เกิดจากการทำธุรกรรมเท่านั้น",
-    "-257890048": "<0/><1/> หรือคุณสามารถส่งการร้องเรียนของคุณไปที่แพลตฟอร์ม <2>การระงับข้อพิพาททางออนไลน์ (ODR) ของคณะกรรมาธิการยุโรป</2>",
     "-1505742956": "<0/><1/> คุณยังสามารถอ้างถึงข้อพิพาทของคุณไปยัง Malta Gaming Authority โดยผ่าน <2>หน่วยสนับสนุนผู้เล่น</2>",
     "-1406192787": "หากคุณไม่พอใจกับผลลัพธ์ คุณสามารถส่งเรื่องร้องเรียนของคุณไปยัง <0>คณะกรรมการทางการเงิน</0>",
     "-1776547326": "<0/><1/>หากคุณอาศัยอยู่ในสหราชอาณาจักรและคุณไม่มีความสุขกับการตอบสนองของเราคุณอาจยกระดับการร้องเรียนของคุณไปยัง <2>บริการ Ombudsman</2>",
@@ -2203,15 +2201,11 @@
     "-382495564": "เปลี่ยนรหัสผ่านแล้ว",
     "-2042845290": "รหัสผ่านนักลงทุนของคุณได้เปลี่ยนเรียบร้อยแล้ว",
     "-1882295407": "รหัสผ่านของคุณได้เปลี่ยนเรียบร้อยแล้ว",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
     "-254497873": "ใช้รหัสผ่านนี้เพื่อให้สิทธิ์การเข้าถึงแก่ผู้ใช้รายอื่น ในขณะพวกเขาอาจดูบัญชีการซื้อขายของคุณ แต่พวกเขาจะไม่สามารถทำการซื้อขายหรือดำเนินการอื่นได้",
     "-161656683": "รหัสผ่านนักลงทุนปัจจุบัน",
     "-374736923": "รหัสผ่านนักลงทุนใหม่",
     "-1793894323": "สร้างหรือรีเซ็ตรหัสผ่านนักลงทุน",
     "-1444706724": "จัดการรหัสผ่านบัญชีจริง DMT5 {{account_title}}",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
     "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "เลือกเซิร์ฟเวอร์สำหรับบัญชี DMT5 ของคุณ {{ account_type }}",
     "-1752211105": "โอนตอนนี้",
@@ -2256,7 +2250,6 @@
     "-2131859340": "ยุติการซื้อขาย <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> ของ (<1/> * {{multiplier}})",
     "-1043117679": "เมื่อการสูญเสียปัจจุบันของคุณเท่ากับหรือเกินกว่า {{stop_out_percentage}}% ของเงินเดิมพันของคุณสัญญาของคุณจะถูกปิดในราคาสินทรัพย์ที่อยู่ใกล้ที่สุด",
-    "-1686434406": "กำไรของคุณคือเปอร์เซ็นต์การเปลี่ยนแปลงของราคาในตลาดคูณกับเงินเดิมพันของคุณและตัวคูณที่คุณเลือกที่นี่",
     "-477998532": "สัญญาของคุณจะถูกปิดโดยอัตโนมัติ เมื่อการขาดทุนของคุณมีมากกว่าหรื่อเท่ากับจำนวนนี้",
     "-243332856": "ตัวเลขหลักสุดท้ายของ 1000 ticksล่าสุดสำหรับ {{ underlying_name }}",
     "-1675848843": "เกิดข้อผิดพลาด",
@@ -2354,7 +2347,7 @@
     "-1652241017": "อ่านคุณสมบัติที่เลือกจากรายการรายละเอียดสัญญา",
     "-2012970860": "บล็อกนี้ให้ข้อมูลเกี่ยวกับสัญญาล่าสุดของคุณ",
     "-985351204": "ซื้อขายอีกครั้ง",
-    "-1155426882": "บล็อกนี้โอนการควบคุมไปยังบล็อกเงื่อนไขการซื้อ",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "บล็อกนี้จะโอนการควบคุมกลับไปยังบล็อกเงื่อนไขการซื้อ ซึ่งจะทำให้คุณสามารถซื้อสัญญาอื่นได้",
     "-403103225": "เริ่มใหม่",
     "-837044282": "ราคาซื้อ {{ contract_type }}",
