--- a/public/i18n/vi.json
+++ b/public/i18n/vi.json
@@ -80,6 +80,7 @@
     "165682516": "Nếu không ngại chia sẻ, vui lòng cho chúng tôi biết các nền tảng giao dịch khác bạn đang sử dụng?",
     "170185684": "Bỏ qua",
     "171307423": "Phục hồi",
+    "171683420": "Reset main password",
     "176319758": "Tổng tiền cược tối đa qua 30 ngày",
     "176654019": "$100,000 - $250,000",
     "179083332": "Ngày",
@@ -237,6 +238,8 @@
     "438067535": "Hơn $500,000",
     "440529960": "Đặt mật khẩu của bạn",
     "442520703": "$250,001 - $500,000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Lý luận phủ định",
     "451852761": "Tiếp tục trên điện thoại",
     "452054360": "Tương tự như RSI, khung này cung cấp cho bạn một danh sách các giá trị cho mỗi mục trong danh sách đầu vào.",
@@ -248,6 +251,7 @@
     "462079779": "Bán lại không được cho phép",
     "463361726": "Chọn một mục",
     "465993338": "Oscar's Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Bắt buộc phải có tên họ",
     "473154195": "Cài đặt",
     "475492878": "Thử các Chỉ số Tổng hợp",
@@ -305,6 +309,7 @@
     "565410797": "Hình dưới đây minh hoạ cách khối Đường Trung Bình Di Chuyển Cơ bản hoạt động:",
     "566274201": "1. Thị trường",
     "567019968": "Một biến là một trong những thành phần quan trọng và mạnh mẽ nhất trong việc tạo bot. Đó là một cách để lưu trữ thông tin, dưới dạng văn bản hoặc số. Thông tin được lưu trữ dưới dạng một biến có thể được sử dụng và thay đổi theo các hướng dẫn đã cho. Các biến có thể được đặt bất kỳ tên nào, nhưng thông thường chúng được đặt các tên tượng trưng, ​​hữu ích để dễ gọi hơn trong khi thực hiện các hướng dẫn.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "Nến {{ input_candle }} màu đen?",
     "577215477": "đếm với {{ variable }} từ {{ start_number }} tới {{ end_number }} bởi {{ step_size }}",
     "577779861": "Rút tiền",
@@ -337,7 +342,6 @@
     "626175020": "Cấp số nhân Lệch Chuẩn Lên {{ input_number }}",
     "626809456": "Gửi lại",
     "627292452": "<0> Xác minh danh tính hoặc xác minh địa chỉ của bạn</0> không đúng với yêu cầu của chúng tôi. Vui lòng kiểm tra email để được hướng dẫn thêm.",
-    "627526394": "Từ giờ bạn chỉ cần một mật khẩu",
     "627814558": "Khung này trả về một giá trị khi một điều kiện là đúng. Sử dụng khung này vào một trong các khung chức năng ở trên.",
     "629145209": "Trong trường hợp nếu thuật toán \"AND\" được chọn, khung sẽ trả về giá trị \"Đúng\" chỉ khi cả hai điều kiện đưa ra là \"Đúng\"",
     "632398049": "Khung này gán giá trị rỗng cho một mục hoặc câu lệnh.",
@@ -365,6 +369,7 @@
     "654924603": "Martingale",
     "657325150": "Khung này được sử dụng để xác định các tùy chọn giao dịch trong khung tham số Giao dịch gốc. Một số tùy chọn chỉ áp dụng cho các loại giao dịch nhất định. Các thông số như thời lượng và cổ phần rất phổ biến giữa hầu hết các loại giao dịch. Dự đoán được sử dụng cho các loại giao dịch như Chữ số, trong khi các bù đắp rào cản là dành cho các loại giao dịch liên quan đến các rào cản như Chạm / Không chạm, Kết thúc vào / ra, v. v.",
     "660481941": "Để truy cập các ứng dụng dành cho thiết bị di động của bạn và các ứng dụng bên thứ ba khác, trước tiên bạn cần tạo mã thông báo API.",
+    "660991534": "Finish",
     "662609119": "Tải ứng dụng MT5",
     "663124295": "Tính khả dụng",
     "665872465": "Trong ví dụ dưới đây, giá mở cửa được chọn, sau đó được gán cho một biến được gọi là \"op\".",
@@ -481,7 +486,6 @@
     "851508288": "Khung này ràng buộc một số đã cho trong phạm vi đã đặt.",
     "852583045": "Chuỗi danh sách Tick",
     "854399751": "Mã số chỉ gồm chữ số.",
-    "856713568": "Có quá nhiều lần thử thất bại",
     "857986403": "làm gì đó",
     "860319618": "Thăm quan",
     "862283602": "Số điện thoại*",
@@ -658,7 +662,6 @@
     "1134879544": "Ví dụ của tài liệu bị lóa",
     "1143730031": "Xu hướng là {{ direction_type }}",
     "1144028300": "Mảng Chỉ số Tiềm lực Tương đối (RSIA)",
-    "1144288893": "Chúng tôi đã nâng cấp hệ thống của mình để hỗ trợ một mật khẩu duy nhất, an toàn hơn trên Deriv. Sau khi đặt mật khẩu mới, bạn có thể sử dụng mật khẩu đó để đăng nhập vào tất cả các tài khoản Deriv và MT5 của mình.",
     "1145927365": "Chạy các khung bên trong sau một số giây nhất định",
     "1151964318": "cả hai bên",
     "1154021400": "danh sách",
@@ -813,7 +816,6 @@
     "1367023655": "Để đảm bảo khoản lỗ của bạn không vượt quá số tiền đặt cược của bạn, hợp đồng của bạn sẽ tự động được đóng khi khoản lỗ của bạn bằng<0/>.",
     "1367488817": "4. Khởi động lại điều kiện giao dịch",
     "1367990698": "Chỉ số biến động 10",
-    "1368002992": "Đi đến Cài đặt",
     "1369709538": "Điều khoản sử dụng của chúng tôi",
     "1371193412": "Hủy",
     "1371641641": "Mở một đường dẫn trên điện thoại của bạn",
@@ -925,7 +927,6 @@
     "1534796105": "Lấy giá trị biến",
     "1539108340": "Chỉ số EUR",
     "1540585098": "Từ chối",
-    "1541818425": "Đặt lại Mật Khẩu",
     "1541969455": "Cả hai",
     "1544642951": "Nếu bạn chọn \"Chỉ Tăng\", bạn sẽ thắng nếu các tick liên tục tăng sau điểm khởi đầu. Sẽ không được trả tiền nếu có bất kỳ tick giảm dưới hoặc bằng các tick trước nó.",
     "1549098835": "Tổng số tiền rút",
@@ -1136,7 +1137,6 @@
     "1903437648": "Phát hiện ảnh bị mờ",
     "1905032541": "Chúng tôi đã sẵn sàng xác minh danh tính cho bạn",
     "1906639368": "Nếu đây là lần đầu tiên bạn thử tạo một mật khẩu, hoặc bạn đã quên mật khẩu của mình, vui lòng đặt lại mật khẩu.",
-    "1908023954": "Rất tiếc, đã xảy ra lỗi khi đang xử lý yêu cầu của bạn.",
     "1908239019": "Hãy đảm bảo tất cả các tài liệu đã có ở trong ảnh",
     "1909769048": "trung bình",
     "1914014145": "Hôm nay",
@@ -1238,7 +1238,6 @@
     "2054500647": "Chính sách khiếu nại này, có thể thay đổi theo thời gian, áp dụng cho (các) tài khoản của bạn đã đăng ký với Deriv (SVG) LLC và Deriv (V) Ltd.",
     "2054889300": "Tạo \"%1\"",
     "2055317803": "Sao chép đường dẫn vào trình duyệt trên điện thoại của bạn",
-    "2056801626": "Xác nhận mật khẩu của bạn",
     "2057419639": "Điểm chốt",
     "2062912059": "chức năng {{ function_name }} {{ function_params }}",
     "2063655921": "Bằng cách mua hợp đồng \"Đóng-tới-Thấp\", bạn sẽ giành được số nhân gấp bội số chênh lệch giữa mức đóng và mức thấp trong suốt thời gian của hợp đồng.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Lỗi Mua",
     "2144609616": "Nếu bạn chọn \"Đặt lại-Xuống\", bạn sẽ thắng khi giá tại thời điểm chốt thấp hơn hẳn so với giá khởi điểm hoặc tại mốc thời điểm đặt lại.",
     "2145690912": "Thu nhập",
+    "2145995536": "Create new account",
     "2146336100": "trong văn bản %1 lấy %2",
     "2146892766": "Kinh nghiệm giao dịch các quyền chọn nhị phân",
     "-2024100696": "Tổng hợp thực",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Các dịch vụ kinh doanh tài chính được cung cấp trên trang web này chỉ phù hợp cho những khách hàng chấp nhận khả năng mất tất cả số tiền họ đầu tư cũng như hiểu và có kinh nghiệm về các rủi ro liên quan trong việc mua lại các hợp đồng tài chính. Các giao dịch hợp đồng tài chính mang một mức độ rủi ro cao. Nếu hợp đồng được mua hết hạn trở nên vô giá trị, bạn sẽ bị mất toàn bộ tiền đầu tư, bao gồm cả phí bảo hiểm hợp đồng.",
     "-1970096931": "Tài khoản của bạn sẽ được mở với Deriv (Europe) Limited, được quy định bởi Cơ quan quản lý \bcá cược Malta và sẽ tuân theo luật pháp của Malta.",
     "-1988735853": "Tài khoản của bạn sẽ được mở với Deriv Investments (Europe) Limited, được quản lý bởi Cơ quan Dịch vụ Tài chính Malta (MFSA) và sẽ tuân theo quyền tài phán và luật pháp của Malta.",
-    "-2068229627": "Tôi hiện tại không phải là PEP, cũng như trong 12 tháng qua.",
     "-1125193491": "Thêm tài khoản",
+    "-2068229627": "Tôi hiện tại không phải là PEP, cũng như trong 12 tháng qua.",
     "-763249420": "{{page_title}} trang <0 /> chỉ khả dụng cho các khách hàng hiện tại.",
     "-207063174": "Nếu bạn có tài khoản đang hoạt động, vui lòng <0>Đăng nhập</0> để truy cập đầy đủ. Nếu không, vui lòng <1>Đăng ký</1> để bắt đầu giao dịch.",
     "-2139303636": "Bạn có thể đã chọn một liên kết không hoạt động, hoặc trang web đã được chuyển đến một địa chỉ mới.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "Độ dài mật khẩu phải từ 8 tới 25 ký tự.",
     "-1776746512": "Mật khẩu hiện tại và mật khẩu mới không thể giống nhau.",
     "-1465674403": "Thay đổi mật khẩu Deriv của bạn",
-    "-1233938428": "Chúng tôi khuyên bạn nên sử dụng một mật khẩu đặc biệt — không chùng với các mật khẩu dùng ở các trang khác.",
     "-1868608634": "Mật khẩu hiện tại",
     "-89973258": "Gửi lại email trong {{seconds}} giây",
     "-1617352279": "Email nằm trong thư mục thư rác của bạn (Đôi khi mọi thứ bị lạc ở đó).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Chính sách khiếu nại này, có thể thay đổi theo thời gian, áp dụng cho tài khoản của bạn đã đăng ký với Deriv Investments (Europe) Limited.",
     "-974989415": "Chính sách khiếu nại này có thể thay đổi theo thời gian, áp dụng cho (các) tài khoản của bạn đã đăng ký với Deriv (SVG) LLC và Deriv (FX) Ltd.",
     "-1639808836": "Nếu bạn không hài lòng với kết quả, bạn có thể chuyển đơn khiếu nại của mình tới <0>Dịch vụ xét xử cá cược độc lập (IBAS </0> bằng cách điền vào biểu mẫu phân xử IBAS. Xin lưu ý rằng IBAS chỉ giải quyết các tranh chấp phát sinh từ giao dịch.",
-    "-257890048": "<0/><1/>Ngoài ra, bạn có thể gửi đơn khiếu nại của mình đến nền tảng <2>Giải quyết Tranh chấp Trực tuyến (ODR)</2> của Ủy ban Châu Âu.",
     "-1505742956": "<0/><1/>Bạn cũng có thể chuyển tranh chấp của mình lên Cơ quan quản lý trò chơi Malta thông qua <2>Đơn vị hỗ trợ người chơi</2>.",
     "-1406192787": "Nếu bạn không hài lòng với kết quả, bạn có thể chuyển đơn khiếu nại của mình lên <0>Ủy ban tài chính</0>.",
     "-1776547326": "<0/><1/>Nếu bạn cư trú ở Vương quốc Anh và không hài lòng với phản hồi của chúng tôi, bạn có thể chuyển đơn khiếu nại của mình lên <2>Dịch vụ thanh tra tài chính</2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "Mật khẩu đã được đổi",
     "-2042845290": "Mật khẩu nhà đầu tư của bạn đã được đổi.",
     "-1882295407": "Mật khẩu của bạn đã được đổi.",
-    "-985529779": "Mật khẩu DMT5 của bạn bây giờ cũng giống với mật khẩu đăng nhập tài khoản Deriv của bạn. Để đặt lại, vui lòng truy cập <0>Settings</0> để thay đổi mật khẩu của bạn.",
     "-254497873": "Sử dụng mật khẩu này để cấp quyền quan sát cho một người dùng khác. Trong khi họ có thể xem các tài khoản giao dịch của bạn, họ sẽ không thể thực hiện giao dịch hoặc có các hành động khác.",
     "-161656683": "Mật khẩu nhà đầu tư hiện tại",
     "-374736923": "Mật khẩu nhà đầu tư mới",
     "-1793894323": "Tạo hoặc đặt lại mật khẩu nhà đầu tư",
     "-1444706724": "Quản lý mật khẩu tài khoản thực DMT5 {{account_title}} của bạn",
-    "-1234339445": "Từ giờ bạn chỉ cần nhập một mật khẩu",
-    "-1418023997": "Không khả dụng do có quá nhiều lần thử không thành công. Vui lòng thử lại sau một phút hoặc đặt lại mật khẩu tài khoản của bạn để tiếp tục.",
-    "-140300511": "Vui lòng xác nhận mật khẩu Deriv để tạo một tài khoản MT5. Nếu bạn quên mật khẩu của mình, hãy chọn <0>Đặt lại mật khẩu</0>.",
     "-1987408434": "Tài khoản MT5 tài chính STP của bạn sẽ được mở thông qua Deriv (BVI) Ltd. Tất cả giao dịch trong tài khoản này phải tuân theo các quy định và hướng dẫn của Cơ quan dịch vụ tài chính Quần đảo Bristish Virgin (BVIFSC). Không có các tài khoản khác của bạn, bao gồm tài khoản Deriv của bạn, phải tuân theo các quy định và hướng dẫn của Cơ quan dịch vụ tài chính Quần đảo Bristish Virgin (BVIFSC).",
     "-1281078994": "Chọn server cho tài khoản DMT5 {{ account_type }} của bạn",
     "-1752211105": "Chuyển khoản ngay",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Dừng lỗ <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> của (<1/>*{{multiplier}})",
     "-1043117679": "Khi khoản lỗ hiện tại của bạn bằng hoặc vượt quá {{stop_out_percentage}}% mức cược của bạn, hợp đồng của bạn sẽ được đóng ở mức giá tài sản hiện có gần nhất.",
-    "-1686434406": "Lợi nhuận của bạn là phần trăm thay đổi trong giá thị trường nhân với số cổ phần của bạn và hệ số nhân được chọn ở đây.",
     "-477998532": "Hợp đồng của bạn sẽ tự động đóng khi tiền lỗ lớn hơn hoặc bằng giá trị này.",
     "-243332856": "Số liệu về chữ số cuối cùng của 1000 tick mới nhất cho {{ underlying_name }}",
     "-1675848843": "Lỗi",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Đọc một đặc tính đã được chọn từ danh sách chi tiết gói thầu",
     "-2012970860": "Khung này cung cấp cho bạn thông tin về gói thầu cuối cùng của bạn.",
     "-985351204": "Giao dịch lại",
-    "-1155426882": "Khối này chuyển quyền điều khiển sang khối điều kiện Mua.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Khung này sẽ chuyển quyền điều khiển trở lại khung Các điều kiện Mua, cho phép bạn mua hợp đồng khác.",
     "-403103225": "khởi động lại",
     "-837044282": "Hỏi Giá {{ contract_type }}",
