--- a/public/i18n/zh_tw.json
+++ b/public/i18n/zh_tw.json
@@ -80,6 +80,7 @@
     "165682516": "如果不介意共享，您還使用其他哪些交易平台？",
     "170185684": "忽略",
     "171307423": "復原",
+    "171683420": "Reset main password",
     "176319758": "30天內最大總投注金額",
     "176654019": "$100,000 - $250,000",
     "179083332": "日期",
@@ -237,6 +238,8 @@
     "438067535": "$500,000以上",
     "440529960": "設定密碼",
     "442520703": "$250,001 - $500,000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "邏輯否定",
     "451852761": "用您的電話繼續操作",
     "452054360": "和相對強弱指數（RSI）相似，此區塊給您提供輸入清單中每一項目的數值清單。",
@@ -248,6 +251,7 @@
     "462079779": "不提供轉售",
     "463361726": "選擇項目",
     "465993338": "奧斯卡長坡纜",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "姓氏為必填欄位",
     "473154195": "設定",
     "475492878": "試試綜合指數",
@@ -305,6 +309,7 @@
     "565410797": "以下圖像顯示簡單移動平均線陣列區塊的工作原理：",
     "566274201": "1. 市場",
     "567019968": "變數是建立機器人時最重要且功能最強大的組件之一。這是一種以文字或數字形式儲存資訊的方法。可以根據給定的說明使用和更改儲存為變數的資訊。變數可以使用任何名稱，但通常會使用有用的符號名稱，以便在執行指令期間更容易調用。",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "蠟燭 {{ input_candle }} 是否呈黑色'?",
     "577215477": "用 {{ variable }} 自 {{ start_number }} 至 {{ end_number }} 按 {{ step_size }} 計算",
     "577779861": "提款",
@@ -337,7 +342,6 @@
     "626175020": "標準偏差上漲乘數{{ input_number }}",
     "626809456": "重新提交",
     "627292452": "<0>您的身份證明或地址證明</0>不符合我們的要求。請檢查您的電子郵件收取進一步指示。",
-    "627526394": "從現在起您只需要一個密碼即可",
     "627814558": "如果條件為真，此區塊將返回一個值。在以上任一函數塊中使用此區塊。",
     "629145209": "如果選擇了「AND」操作，則僅當兩個給定值均為「真」時，區塊才返回「真」",
     "632398049": "此區塊給項目或語句分配空值。",
@@ -365,6 +369,7 @@
     "654924603": "鞅",
     "657325150": "此區塊用於在交易參數根塊內定義交易選項。一些選項僅適用於某些交易類型。大多數交易類型中，諸如持續時間和投注等參數是常見的。預測用於數字之類的交易類型，而障礙位移用於涉及諸如觸及/未觸及、到期在範圍內/範圍外等障礙的交易類型。",
     "660481941": "首先您必須生成API權杖才能夠存取您的的行動應用程式和其他第三方應用程式。",
+    "660991534": "Finish",
     "662609119": "下載 MT5 應用程式",
     "663124295": "可用性",
     "665872465": "下例中，先選定開盤價，然後分配予稱為\"op\"的變數。",
@@ -481,7 +486,6 @@
     "851508288": "此區塊含設定範圍內的指定數字。",
     "852583045": "跳動點清單字串",
     "854399751": "數字代碼必須只含數目字。",
-    "856713568": "失敗嘗試次數太多",
     "857986403": "做些甚麼",
     "860319618": "旅遊",
     "862283602": "電話號碼*",
@@ -658,7 +662,6 @@
     "1134879544": "帶有眩光的文檔示例",
     "1143730031": "方向為 {{ direction_type }}",
     "1144028300": "相對強度指標陣列(RSIA)",
-    "1144288893": "我們的系統已升級，以支持Deriv的單一更安全密碼。設定新密碼後，即可使用它登入所有Deriv和DMT5帳戶。",
     "1145927365": "指定秒數後運行內部區塊",
     "1151964318": "兩邊",
     "1154021400": "清單",
@@ -813,7 +816,6 @@
     "1367023655": "為確保您的虧損不超過您的投注金額，當虧損等於<0/>時，您的合約將自動平倉。",
     "1367488817": "4. 重啟交易條件",
     "1367990698": "波動率 10 指數",
-    "1368002992": "前往設定",
     "1369709538": "我們的使用條款",
     "1371193412": "取消",
     "1371641641": "用手機打開連結",
@@ -925,7 +927,6 @@
     "1534796105": "取得變數值",
     "1539108340": "歐元指數",
     "1540585098": "拒絕",
-    "1541818425": "重設密碼",
     "1541969455": "兩個",
     "1544642951": "如果您選擇「只會持續上漲」期權，只要入市現價後的價格持續上漲，您將獲得賠付。如果期間內的價格有任何下跌或相等於之前的價格， 您將不會獲得賠付。",
     "1549098835": "提款總額",
@@ -1136,7 +1137,6 @@
     "1903437648": "偵測到模糊的照片",
     "1905032541": "我們現在準備驗證您的身份",
     "1906639368": "如這是您首次嘗試建立密碼或您已忘了密碼，請重設。",
-    "1908023954": "對不起，在處理您的請求時發生錯誤。",
     "1908239019": "確保所有文檔都在照片中",
     "1909769048": "中值",
     "1914014145": "今天",
@@ -1238,7 +1238,6 @@
     "2054500647": "此投訴政策可能會不時更改，適用於您在 Deriv (SVG) LLC 和 Deriv (V) Ltd 註冊的帳戶。",
     "2054889300": "建立「%1」",
     "2055317803": "複製連結到您的手機瀏覽器",
-    "2056801626": "確認密碼",
     "2057419639": "退市現價",
     "2062912059": "功能 {{ function_name }} {{ function_params }}",
     "2063655921": "透過購入「收盤至最低值」 合約，您將贏取合約期間內乘數值乘以收盤與最低值之間的差額。",
@@ -1294,6 +1293,7 @@
     "2143803283": "買入錯誤",
     "2144609616": "如果您選擇「重設-下跌」，只要退市現價嚴格低於入市現價或重設時現貨價，您將獲得賠付。",
     "2145690912": "賺取收入",
+    "2145995536": "Create new account",
     "2146336100": "%1文字中獲取%2",
     "2146892766": "二元期權交易經驗",
     "-2024100696": "真實綜合",
@@ -1530,8 +1530,8 @@
     "-2073934245": "本網站所提供的金融交易服務僅適合這樣的客戶：能夠接受全部投入資金虧損的可能性，了解購買金融合約所蘊含的風險並擁有相關的風險經歷。金融合約交易涉及很大的風險。如果所購買的合約到期時一文不值，您的投資將完全損失，其中還包括合約費用。",
     "-1970096931": "您的帳戶將通過 Deriv (Europe) Limited 開立，並由馬爾他博彩機構監管，以及受馬爾他的法律管轄。",
     "-1988735853": "您的帳戶將通過 Deriv Investments (Europe) Limited 開立，並由馬爾他金融服務機構 (MFSA) 監管，以及受馬爾他的法律管轄。",
-    "-2068229627": "本人不是政治公眾人士，而且在過去的12個月中，我未曾當過政治公眾人士。",
     "-1125193491": "新增帳戶",
+    "-2068229627": "本人不是政治公眾人士，而且在過去的12個月中，我未曾當過政治公眾人士。",
     "-763249420": "{{page_title}} 頁面僅<0 />現有客戶可用。",
     "-207063174": "如果您有活躍的帳戶, 請<0>登入</0>以獲得完整的存取權限。否則請<1>註冊</1>以開始交易。",
     "-2139303636": "可能您使用的連結已無效，或該頁面已轉移到新地址。",
@@ -1618,7 +1618,6 @@
     "-1738671831": "密碼長度必須是8-25個字元。",
     "-1776746512": "目前密碼和新密碼不能相同。",
     "-1465674403": "更改Deriv密碼",
-    "-1233938428": "我們建議您使用唯一的密碼，您不會在其他任何網站上使用的密碼。",
     "-1868608634": "目前密碼",
     "-89973258": "{{seconds}} 秒後重傳電子郵件",
     "-1617352279": "郵件在您的垃圾郵箱（有時一些郵件會誤送到那兒）。",
@@ -2022,7 +2021,6 @@
     "-1125272179": "此投訴政策可能會不時更改，適用於您在 Deriv Investments (Europe) Limited 註冊的帳戶。",
     "-974989415": "此投訴政策可能會不時更改，適用於您在 Deriv (SVG) LLC 和 Deriv (FX) Ltd 註冊的帳戶。",
     "-1639808836": "如果您對結果不滿意，可以通過填寫 IBAS 裁決表向<0>獨立博彩裁決服務（IBAS）</0>上訴。請注意，IBAS 僅處理因交易引起的爭議。",
-    "-257890048": "<0/> <1/>或者，您可以將投訴提呈到<2>歐洲委員會的線上爭議解決（ODR）</2>平台。",
     "-1505742956": "<0/> <1/>您還可以通過<2>投注者支持部門</2>將您的爭議提交馬爾他博彩管理局。",
     "-1406192787": "如果您對結果不滿意，可以將投訴上報給<0>金融委員會</0>。",
     "-1776547326": "<0/><1/>如果您在英國居住，並對我們的答覆不滿意，則可以進一步向<2>金融申訴專員服務</2>提出投訴。",
@@ -2203,15 +2201,11 @@
     "-382495564": "密碼已更改",
     "-2042845290": "您的投資者密碼已被更改。",
     "-1882295407": "您的密碼已被更改.",
-    "-985529779": "現在您的DMT5密碼與 Deriv帳戶的登入密碼相同。若要重設，請轉到<0>設定</0>頁面更改密碼。",
     "-254497873": "用此密碼給予其他使用者檢視權限。該使用者檢視您的交易帳戶時將無法交易或採取任何其他行動。",
     "-161656683": "目前投資者密碼",
     "-374736923": "新投資者密碼",
     "-1793894323": "建立或重設投資者密碼",
     "-1444706724": "管理 DMT5 真實{{account_title}} 帳戶密碼",
-    "-1234339445": "從現在起您只需要一個密碼即可",
-    "-1418023997": "由於嘗試失敗次數過多，因此無法使用。請稍後重試或重設帳戶密碼以繼續操作。",
-    "-140300511": "請確認您的Deriv 密碼以建立DMT5帳戶。如果您忘了密碼，請點選<0>重設密碼</0>。",
     "-1987408434": "您的 MT5 金融 STP 帳戶將通過 Deriv（BVI）Ltd 開立。該帳戶的所有交易均受英屬維爾京群島金融服務委員會（BVIFSC）的規定和準則的約束。所有其他帳戶，包括您的Deriv帳戶，均不受英屬維爾京群島金融服務委員會（BVIFSC）的法規和準則的約束。",
     "-1281078994": "選擇 DMT5 {{ account_type }} 帳戶的伺服器",
     "-1752211105": "立刻轉匯",
@@ -2256,7 +2250,6 @@
     "-2131859340": "強制平倉<0/>",
     "-1686280757": "(<1/> * {{multiplier}}) 的<0>{{commission_percentage}}%</0>",
     "-1043117679": "當您目前的虧損等於或超過您投注額的{{stop_out_percentage}}％時，您的合約將以最接近的可用資產價格平倉。",
-    "-1686434406": "您的盈利將是市價變化的百分比乘以您的投注額和此處選擇的乘數。",
     "-477998532": "當您的虧損達到或大於此金額，合約將自動平倉。",
     "-243332856": "{{ underlying_name }} 最新1000跳點之最後統計數字",
     "-1675848843": "錯誤",
@@ -2354,7 +2347,7 @@
     "-1652241017": "從合同詳細資訊清單中讀取所選的財產",
     "-2012970860": "此區塊為您提供有關上一份合約的資訊。",
     "-985351204": "再次交易",
-    "-1155426882": "此區塊將控制權轉移到買入條件區塊。",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "此區塊將控制權轉移回「購入」條件區塊，使您可購買另一份合約。",
     "-403103225": "重啟",
     "-837044282": "詢問價格 {{ contract_type }}",
