--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -80,6 +80,7 @@
     "165682516": "Si no le importa compartir, ¿qué otras plataformas de trading utiliza?",
     "170185684": "Ignorar",
     "171307423": "Recuperación",
+    "171683420": "Reset main password",
     "176319758": "Inversión máx. total durante 30 días",
     "176654019": "$100.000 - $250.000",
     "179083332": "Fecha",
@@ -237,6 +238,8 @@
     "438067535": "Más de $500.000",
     "440529960": "Establecer contraseña",
     "442520703": "$250.001 - $500.000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Negación lógica",
     "451852761": "Continuar en su teléfono",
     "452054360": "Similar al RSI, este bloque le brinda una lista de valores para cada entrada en la lista de entrada.",
@@ -248,6 +251,7 @@
     "462079779": "No se ofrece reventa",
     "463361726": "Seleccione un item",
     "465993338": "Oscar's Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Se requiere el apellido",
     "473154195": "Configuración",
     "475492878": "Pruebe los índices sintéticos",
@@ -305,6 +309,7 @@
     "565410797": "La siguiente imagen ilustra cómo funciona el bloque del conjunto de la Media Móvil Simple:",
     "566274201": "1. Mercado",
     "567019968": "Una variable se encuentra entre los componentes más importantes y poderosos en la creación de un bot. Es una forma de almacenar información, ya sea como texto o números. La información almacenada como variable se puede usar y cambiar de acuerdo a las instrucciones proporcionadas. A las variables se les puede dar cualquier nombre pero generalmente se les dan nombres simbólicos y útiles que facilitan llamarlas durante la ejecución de las instrucciones.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "¿La vela {{ input_candle }} es negra?",
     "577215477": "cuenta con {{ variable }} desde {{ start_number }} hasta {{ end_number }} por {{ step_size }}",
     "577779861": "Retirar",
@@ -337,7 +342,6 @@
     "626175020": "Multiplicador de desviación estándar ascendente {{ input_number }}",
     "626809456": "Reenviar",
     "627292452": "<0>Su comprobante de identidad o de domicilio</0>no cumple nuestros requisitos. Por favor, revise su correo electrónico para más instrucciones.",
-    "627526394": "Todo lo que necesita a partir de ahora es una contraseña",
     "627814558": "Este bloque devuelve un valor cuando una condición es verdadera. Use este bloque dentro de cualquiera de los bloques de funciones anteriores.",
     "629145209": "En caso que se seleccione la operación \"Y\", el bloque devuelve \"Verdadero\" solo si ambos valores dados son \"Verdaderos\"",
     "632398049": "Este bloque asigna un valor nulo a un elemento o afirmación.",
@@ -365,6 +369,7 @@
     "654924603": "Martingala",
     "657325150": "Este bloque se utiliza para definir opciones de trading dentro del bloque raíz de parámetros comerciales. Algunas opciones solo son aplicables para ciertos tipos de trading. Parámetros como la duración y la participación son comunes entre la mayoría de los tipos de trading. La predicción se usa para tipos como Dígitos mientras que las compensaciones de barrera son para tipos que involucran barreras como Toque / Sin Toque, Finaliza dentro / Fuera, etc.",
     "660481941": "Para acceder a sus aplicaciones móviles y otras aplicaciones de terceros, primero deberá generar un token API.",
+    "660991534": "Finish",
     "662609119": "Descargar la aplicación MT5",
     "663124295": "Disponibilidad",
     "665872465": "En el siguiente ejemplo, se selecciona el precio de apertura, que luego se asigna a una variable llamada \"op\".",
@@ -481,7 +486,6 @@
     "851508288": "Este bloque restringe un número dado dentro de un rango establecido.",
     "852583045": "Cadena de la lista de ticks",
     "854399751": "El código de dígitos solo debe contener números.",
-    "856713568": "Demasiados intentos fallidos",
     "857986403": "hacer algo",
     "860319618": "Turismo",
     "862283602": "Número de teléfono*",
@@ -658,7 +662,6 @@
     "1134879544": "Ejemplo de un documento con reflejo",
     "1143730031": "La dirección es {{ direction_type }}",
     "1144028300": "Conjunto de índice de fuerza relativa (RSIA)",
-    "1144288893": "Hemos actualizado nuestro sistema para aceptar una contraseña única y más segura en Deriv. Una vez que haya establecido una nueva contraseña, puede usarla para iniciar sesión en todas sus cuentas Deriv y DMT5.",
     "1145927365": "Ejecuta los bloques dentro tras un número determinado de segundos",
     "1151964318": "ambos lados",
     "1154021400": "lista",
@@ -813,7 +816,6 @@
     "1367023655": "Para garantizar que su pérdida no exceda su inversión, su contrato se cerrará automáticamente cuando su pérdida sea igual a <0/>.",
     "1367488817": "4. Restablecer las condiciones del contrato",
     "1367990698": "Índice de volatilidad 10",
-    "1368002992": "Ir a la configuración",
     "1369709538": "Nuestros Términos de uso",
     "1371193412": "Cancelar",
     "1371641641": "Abrea el enlace en su móvil",
@@ -925,7 +927,6 @@
     "1534796105": "Obtiene un valor de variable",
     "1539108340": "Índice EUR",
     "1540585098": "Rechazar",
-    "1541818425": "Restablecer contraseña",
     "1541969455": "Ambos",
     "1544642951": "Si selecciona \"Sólo Abajo\", usted gana el pago si los ticks consecutivos suben sucesivamente después del precio de entrada. No se gana el pago si algún tick cae o es igual a cualquier de los ticks anteriores.",
     "1549098835": "Retiros totales",
@@ -1136,7 +1137,6 @@
     "1903437648": "Se detectó una foto borrosa",
     "1905032541": "Ahora estamos listos para verificar su identidad",
     "1906639368": "Si es la primera vez que intenta crear una contraseña, o si la ha olvidado, reiníciela.",
-    "1908023954": "Lo sentimos, ha ocurrido un error mientras se procesaba su solicitud.",
     "1908239019": "Asegúrese de que todo el documento esté en la foto",
     "1909769048": "mediana",
     "1914014145": "Hoy",
@@ -1238,7 +1238,6 @@
     "2054500647": "Esta política de quejas, que puede cambiar de vez en cuando, se aplica a su (s) cuenta (s) registrada (s) con Deriv (SVG) LLC y Deriv (V) Ltd.",
     "2054889300": "Crear \"%1\"",
     "2055317803": "Copie el enlace a su navegador móvil",
-    "2056801626": "Confirmar su contraseña",
     "2057419639": "Punto de salida",
     "2062912059": "función {{ function_name }} {{ function_params }}",
     "2063655921": "Al comprar el contrato \"Cerrar-Bajo\", ganará el valor del multiplicador por la diferencia entre el cierre y el bajo a lo largo la duración del contrato.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Error de compra",
     "2144609616": "Si selecciona \"Reset-Down\", ganará el pago si el punto de salida es estrictamente más bajo que el punto de entrada o el punto en el momento del reset.",
     "2145690912": "Ingresos",
+    "2145995536": "Create new account",
     "2146336100": "en el texto %1 obtener %2",
     "2146892766": "Experiencia en trading con opciones binarias",
     "-2024100696": "Sintética real",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Los servicios del trading financiero ofrecidos en este sitio solo son adecuados para clientes que aceptan la posibilidad de perder todo el dinero que invierten y que entienden y tienen experiencia del riesgo involucrado en la compra de contratos financieros. Las transacciones en contratos financieros conllevan un alto grado de riesgo. Si los contratos que compró caducan como sin valor, perderá toda su inversión, que incluye la prima del contrato.",
     "-1970096931": "Su cuenta se abrirá con Deriv (Europe) Limited, regulada por la Autoridad de Juegos de Malta, y estará sujeta a las leyes de Malta.",
     "-1988735853": "Su cuenta se abrirá con Deriv Investments (Europe) Limited, regulada por la Autoridad de Servicios Financieros de Malta (MFSA) y estará sujeta a la jurisdicción y las leyes de Malta.",
-    "-2068229627": "No soy una PEP, y no he sido una PEP en los últimos 12 meses.",
     "-1125193491": "Añadir cuenta",
+    "-2068229627": "No soy una PEP, y no he sido una PEP en los últimos 12 meses.",
     "-763249420": "La página {{page_title}} solo está disponible<0 />para clientes existentes.",
     "-207063174": "Si tiene una cuenta activa, <0>Inicie sesión</0> para tener acceso completo. De lo contrario, <1>Regístrese</1> para comenzar a operar.",
     "-2139303636": "Es posible que haya seguido un enlace roto o que la página se haya movido a una nueva dirección.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "La contraseña debe tener entre 8 y 25 caracteres.",
     "-1776746512": "La contraseña actual y la nueva contraseña no pueden ser iguales.",
     "-1465674403": "Cambie su contraseña Deriv",
-    "-1233938428": "Recomendamos utilizar una contraseña única, la que no utilice para ningún otro sitio.",
     "-1868608634": "Contraseña actual",
     "-89973258": "Reenviar correo electrónico en {{seconds}}s",
     "-1617352279": "El correo electrónico está en su bandeja de spam (a veces las cosas se pierden allí).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Esta política de quejas, que puede cambiar ocasionalmente, se aplica a su cuenta registrada en Deriv Investments (Europe) Limited.",
     "-974989415": "Esta política de quejas, que puede cambiar de vez en cuando, se aplica a su (s) cuenta (s) registrada (s) con Deriv (SVG) LLC y Deriv (FX) Ltd.",
     "-1639808836": "Si no está satisfecho con el resultado, puede elevar su queja al <0>Servicio Independiente de Adjudicación de Apuestas (IBAS) </0> completando el formulario de adjudicación de IBAS. Tenga en cuenta que IBAS solo se ocupa de las disputas que resultan de transacciones.",
-    "-257890048": "<0/><1/>Como alternativa, puede enviar su queja a la plataforma de <2>Resolución de disputas en línea de la Comisión Europea (ODR)</2>.",
     "-1505742956": "<0/><1/>También puede remitir su disputa a la Autoridad de Juegos de Malta a través de la <2>Unidad de asistencia al jugador</2>.",
     "-1406192787": "Si no está satisfecho con el resultado, puede escalar su queja a la <0>Comisión Financiera</0>.",
     "-1776547326": "<0/><1/>Si reside en el Reino Unido y no está satisfecho con nuestra respuesta, puede elevar su reclamo al <2>Servicio del Intermediario Financiero</2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "Contraseña cambiada",
     "-2042845290": "Su contraseña de inversionista ha sido cambiada.",
     "-1882295407": "Su contraseña sido cambiada.",
-    "-985529779": "Su contraseña DMT5 ahora es la misma que la contraseña de inicio de sesión de su cuenta Deriv. Para restablecerla, diríjase a la página de <0>Configuración</0> para efectuar cambios.",
     "-254497873": "Use esta contraseña para otorgar acceso de visualización a otro usuario. Mientras que pueden ver su cuenta comercial, no podrán comerciar ni realizar ninguna otra acción.",
     "-161656683": "Actual contraseña de inversor",
     "-374736923": "Nueva contraseña de inversor",
     "-1793894323": "Crear o restablecer la contraseña de inversor",
     "-1444706724": "Administre la contraseña de cuenta real DMT5 {{account_title}}",
-    "-1234339445": "Todo lo que necesita a partir de ahora es una contraseña",
-    "-1418023997": "No disponible debido a demasiados intentos fallidos. Vuelva a intentarlo en un minuto o restablezca la contraseña de su cuenta para continuar.",
-    "-140300511": "Confirme su contraseña de Deriv para crear una cuenta DMT5. Si olvidó su contraseña, haga clic en <0>Restablecer contraseña</0>.",
     "-1987408434": "Su cuenta Financiera STP MT5 se abrirá a través de Deriv (BVI) Ltd. Todas las operaciones en esta cuenta están sujetas a las regulaciones y pautas de la Comisión de Servicios Financieros de las Islas Vírgenes Británicas (BVIFSC). Ninguna de sus otras cuentas, incluida su cuenta Deriv, está sujeta a las regulaciones y pautas de la Comisión de Servicios Financieros de las Islas Vírgenes Británicas (BVIFSC).",
     "-1281078994": "Elija un servidor para su cuenta DMT5 {{ account_type }}",
     "-1752211105": "Transferir ahora",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Stop out <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> de (<1/> * {{multiplier}})",
     "-1043117679": "Cuando su pérdida actual es igual a o exceda el {{stop_out_percentage}}% de su inversión, su contrato se cerrará al precio de activo disponible más cercano.",
-    "-1686434406": "Su ganancia es el cambio porcentual en el precio de mercado multiplicado por su inversión y el multiplicador elegido aquí.",
     "-477998532": "Su contrato se cierra automáticamente cuando su pérdida es superior o igual a esta cantidad.",
     "-243332856": "Estadísticas del último dígito para los últimos 1000 ticks para {{ underlying_name }}",
     "-1675848843": "Error",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Lee una propiedad seleccionada de la lista de detalles del contrato",
     "-2012970860": "Este bloque le brinda información sobre su último contrato.",
     "-985351204": "Opere nuevamente",
-    "-1155426882": "Esto bloquea el control de transferencias al bloque de condiciones de compra.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Este bloque transferirá el control nuevamente al bloque de Condiciones de compra, permitiéndole comprar otro contrato.",
     "-403103225": "reiniciar",
     "-837044282": "Precio de venta {{ contract_type }}",
