--- a/public/i18n/it.json
+++ b/public/i18n/it.json
@@ -80,6 +80,7 @@
     "165682516": "Quali altre piattaforme di trading usi? Puoi non rispondere, se preferisci.",
     "170185684": "Ignora",
     "171307423": "Recupero",
+    "171683420": "Reset main password",
     "176319758": "Puntata massima totale su 30 giorni",
     "176654019": "100.000 $ - 250.000 $",
     "179083332": "Data",
@@ -237,6 +238,8 @@
     "438067535": "Più di 500.000 $",
     "440529960": "Imposta la password",
     "442520703": "250.001 $ - 500.000 $",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Negazione logica",
     "451852761": "Continua su telefono",
     "452054360": "Analogamente all'indicatore RSI, questo blocco offre un elenco di valori per ogni voce dell'elenco di input.",
@@ -248,6 +251,7 @@
     "462079779": "La rivendita non è offerta",
     "463361726": "Seleziona un elemento",
     "465993338": "Oscar Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "Cognome obbligatorio",
     "473154195": "Impostazioni",
     "475492878": "Prova gli indici sintetici",
@@ -305,6 +309,7 @@
     "565410797": "L'immagine sottostante mostra come funziona un blocco di Array di media mobile semplice:",
     "566274201": "1. Mercato",
     "567019968": "Una variabile è uno dei componenti più importanti e rilevanti nella creazione di un bot. Si tratta di una modalità per conservare informazioni, sia sotto forma di testo sia di numeri. L'informazione immagazzinata come variabile può essere utilizzata o scambiata a seconda di istruzioni determinate. Le variabili possono avere qualsiasi nome, anche se tendenzialmente si preferiscono nomi utili e simbolici in modo tale che sia più semplice ricordarli durante l'esecuzione di istruzioni.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "La candela {{ input_candle }} è nera?",
     "577215477": "conta con {{ variable }} da {{ start_number }} a {{ end_number }} per {{ step_size }}",
     "577779861": "Prelievo",
@@ -337,7 +342,6 @@
     "626175020": "Moltiplicatore al rialzo della deviazione standard {{ input_number }}",
     "626809456": "Reinvia",
     "627292452": "<0>La prova a verifica dell'identità o di residenza</0> non ha soddisfatto i nostri requisiti. Controlla la tua e-mail per ulteriori istruzioni.",
-    "627526394": "Avrai bisogno soltanto di una password",
     "627814558": "Questo blocco restituisce un valore quando la condizione è vera. Utilizzalo all'interno di uno dei blocchi di funzione sopra riportati.",
     "629145209": "Se è stata selezionata l'operazione \"AND\", il blocco torna \"Vero\" solo se entrambi i valori sono \"Veri\"",
     "632398049": "Questo blocco attribuisce un valore nullo a un item o una dichiarazione.",
@@ -365,6 +369,7 @@
     "654924603": "Martingale",
     "657325150": "Questo blocco è utilizzato per definire le opzioni di trade all'interno del blocco radice dei parametri di trading. Alcune opzioni sono applicabili soltanto ad alcune tipologie di trade. I parametri durata e puntata sono tra i tipi di trade più comuni. Le predizioni sono utilizzate per trade come Cifre, mentre le compensazioni di barriera servono per tipologie di trade come Tocca/Non tocca, Termina dentro/Esce fuori, etc.",
     "660481941": "Per accedere alle app su telefono e ad altre app di parti terze, occorre generare un token API.",
+    "660991534": "Finish",
     "662609119": "Scarica l'app per MT5",
     "663124295": "Disponibilità",
     "665872465": "Nell'esempio sottostante, è stato selezionato il prezzo di apertura, che viene poi assegnato a una variabile chiamata \"op\".",
@@ -481,7 +486,6 @@
     "851508288": "Questo blocco vincola un dato numero all'interno di un intervallo stabilito.",
     "852583045": "Stringa lista di tick",
     "854399751": "Il codice può contenere solo numeri.",
-    "856713568": "Troppi tentativi falliti",
     "857986403": "esegui operazione",
     "860319618": "Turismo",
     "862283602": "Numero di telefono*",
@@ -658,7 +662,6 @@
     "1134879544": "Esempio di un documento con riflessi",
     "1143730031": "La direzione è {{ direction_type }}",
     "1144028300": "Array di indici di forza relativa (RSIA)",
-    "1144288893": "Abbiamo aggiornato il sistema in modo che serva una sola password più sicura su Deriv. Una volta impostata, potrai usarla per accedere a tutti i conti Deriv e DMT5.",
     "1145927365": "Attiva i blocchi interni dopo un determinato numero di secondi",
     "1151964318": "entrambi i lati",
     "1154021400": "elenco",
@@ -813,7 +816,6 @@
     "1367023655": "Per assicurarti che la perdita non superi la puntata, il contratto verrà chiuso automaticamente quando la perdita raggiunge <0/>.",
     "1367488817": "4. Condizioni per il riavvio dei trade",
     "1367990698": "Indice di volatilità 10",
-    "1368002992": "Vai alle Impostazioni",
     "1369709538": "I nostri termini d'uso",
     "1371193412": "Annulla",
     "1371641641": "Apri il link sul tuo smartphone",
@@ -925,7 +927,6 @@
     "1534796105": "Ricevi il valore della variabile",
     "1539108340": "Indice EUR",
     "1540585098": "Rifiuta",
-    "1541818425": "Reimposta la password",
     "1541969455": "Entrambi",
     "1544642951": "Selezionando \"Solo ascendente\", ottieni il payout se tick consecutivi superano successivamente il punto di entrata. Non ottieni alcun payout se qualsiasi tick è minore o uguale a uno dei tick precedenti.",
     "1549098835": "Totale prelievo",
@@ -1136,7 +1137,6 @@
     "1903437648": "Fotografia sfocata",
     "1905032541": "Siamo pronti a verificare la tua identità",
     "1906639368": "Se è la prima volta che crei una password o hai dimenticato la tua, ti invitiamo a reimpostarla.",
-    "1908023954": "Siamo spiacenti, si è verificato un errore durante l'elaborazione della tua richiesta.",
     "1908239019": "Assicurati che l'immagine comprenda il documento per intero",
     "1909769048": "mediana",
     "1914014145": "Oggi",
@@ -1238,7 +1238,6 @@
     "2054500647": "La presente politica sui reclami potrebbe cambiare nel tempo, e si applica ai conti registrati con Deriv (SVG) LLC e Deriv (V) Ltd.",
     "2054889300": "Crea \"%1\"",
     "2055317803": "Copia il link sul browser del tuo smartphone",
-    "2056801626": "Conferma la nuova password",
     "2057419639": "Prezzo di uscita",
     "2062912059": "funzione {{ function_name }} {{ function_params }}",
     "2063655921": "Acquistando il contratto \"Close-to-Low\", la vincita corrisponderà al prodotto tra il moltiplicatore e la differenza tra il valore di chiusura (close) e il valore minimo (low) nel corso della durata del contratto.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Errore d'acquisto",
     "2144609616": "Selezionando \"Reimposta discendente\", vinci il payout se il punto di uscita è strettamente inferiore al punto di entrata o al punto alla data di reset.",
     "2145690912": "Fonte di reddito",
+    "2145995536": "Create new account",
     "2146336100": "nel testo %1 ricevi %2",
     "2146892766": "Esperienza di trading di opzioni binarie",
     "-2024100696": "Per indici sintetici reali",
@@ -1530,8 +1530,8 @@
     "-2073934245": "I servizi di trading finanziario offerti su questo sito sono disponibili esclusivamente per i clienti che accettano la possibilità di perdere tutto il denaro investito e comprendono a fondo il rischio legato all'acqusito di contratti finanziari. Le operazioni relative a tali contratti comportano un elevato livello di rischio; se il contratto acquistato termina con valore nullo, perdererai tutto il denaro investito, compresso il premio contrattuale.",
     "-1970096931": "Il tuo conto sarà aperto con Deriv (Europe) Limited, regolamentata dalla Malta Gaming Authority, e sarà sottoposto alla legge di Malta.",
     "-1988735853": "Il tuo conto sarà aperto con Deriv Investments (Europe) Limited, regolamentata dalla Malta Financial Services Authority (MFSA), e sarà sottoposto alla giurisdizione e alla legge di Malta.",
-    "-2068229627": "Non sono un soggetto PEP e non lo sono stato negli ultimi 12 mesi.",
     "-1125193491": "Aggiungi conto",
+    "-2068229627": "Non sono un soggetto PEP e non lo sono stato negli ultimi 12 mesi.",
     "-763249420": "La pagina {{page_title}} è disponibile<0 />solo per clienti già esistenti.",
     "-207063174": "Se hai un conto attivo, effettua il <0>login</0> per avere accesso completo. Altrimenti, <1>Registrati</1> per iniziare a fare trading.",
     "-2139303636": "È possibile che il colegamento si sia interrotto, o che l'indirizzo della pagina sia cambiato.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "La password deve può contenere 8-25 caratteri.",
     "-1776746512": "La password attuale e quella nuova non possono essere identiche.",
     "-1465674403": "Modifica la password Deriv",
-    "-1233938428": "Suggeriamo di usare una password unica, che non usi per nessun altro sito web.",
     "-1868608634": "Password attuale",
     "-89973258": "Invia di nuovo l'e-mail tra {{seconds}}s",
     "-1617352279": "L' e-mail è nella cartella spam (dove alle volte finiscono i messaggi).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "La presente politica sui reclami potrebbe cambiare nel tempo, e si applica al conto registrato con Deriv Investments (Europe) Limited.",
     "-974989415": "La presente politica sui reclami potrebbe cambiare nel tempo, e si applica ai conti registrati con Deriv (SVG) LLC e Deriv (FX) Ltd.",
     "-1639808836": "Se non sei soddisfatto del riscontro, puoi presentare il reclamo all'<0>Independent Betting Adjudication Service (IBAS)</0> compilando il rispettivo modulo dell'IBAS. L'IBAS si occupa esclusivamente delle controversie derivanti da operazioni finanziarie.",
-    "-257890048": "<0/><1/>In alternativa, puoi inviare il reclamo alla piattaforma <2>Risoluzione online delle controversie (ODR) della Commissione Europea</2>.",
     "-1505742956": "<0/><1/>Puoi anche inviare il reclamo alla Malta Gaming Authority tramite l'<2>unità di supporto del giocatore</2>.",
     "-1406192787": "Se non sei soddisfatto della decisione, puoi inoltrare il reclamo alla <0>commissione finanziaria</0>.",
     "-1776547326": "<0/><1/>Se vivi nel Regno Unito e non sei soddisfatto del riscontro ricevuto da noi, puoi presentare un reclamo al <2>Financial Ombudsman Service</2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "La password è cambiata",
     "-2042845290": "La password di investitore è stata modificata.",
     "-1882295407": "La password è stata modificata.",
-    "-985529779": "Ora la password DMT5 è la stessa che usi per accedere a Deriv. Per reimpostarla, vai sulla pagina <0>Impostazioni</0>.",
     "-254497873": "Utilizza la password per permettere a un altro utente di visualizzare l'accesso: questo potrebbe vedere il tuo conto di trading, ma non potrà effettuare trading né altre operazioni.",
     "-161656683": "Attuale password investitore",
     "-374736923": "Nuova password investitore",
     "-1793894323": "Crea o reimposta la password investitore",
     "-1444706724": "Gestisci la password conto reale {{account_title}} DMT5",
-    "-1234339445": "Avrai bisogno soltanto di una password",
-    "-1418023997": "Non disponibile: hai effettuato troppi tentativi. Prova di nuovo tra un minuto oppure reimposta la password del conto per continuare.",
-    "-140300511": "Conferma la password Deriv per creare un conto DMT5. Se hai dimenticato la password, clicca su <0>Reimposta password</0>.",
     "-1987408434": "Il tuo conto reale STP di MT5 verrà aperto tramite Deriv (BVI) Ltd. I trade effettuati con questo conto sono soggetti a regolamenti e linee guida della British Virgin Islands Financial Services Commission (BVIFSC); nessuno degli altri conti, incluso quello Deriv, fa riferimento a tali regolamenti e linee guida.",
     "-1281078994": "Scegli una server per il tuo conto {{ account_type }} DMT5",
     "-1752211105": "Trasferisci ora",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Stop out <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> di (<1/> * {{multiplier}})",
     "-1043117679": "Quando le perdite correnti sono pari o maggiori al {{stop_out_percentage}}% della puntata, il contratto viene chiuso al prezzo dell'asset disponibile più vicino.",
-    "-1686434406": "Il profitto corrisponde alla variazione percentuale del prezzo di mercato moltiplicata per la puntata e il moltiplicatore da te scelto.",
     "-477998532": "Il contratto viene chiuso automaticamente quando la perdita è maggiore o pari a questo importo.",
     "-243332856": "Statistiche dell'ultima cifra per gli ultimi 1000 tick per {{ underlying_name }}",
     "-1675848843": "Errore",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Legge una proprietà selezionata dall'elenco dei dettagli dei contratti",
     "-2012970860": "Questo blocco offre informazioni sull'ultimo contratto.",
     "-985351204": "Continua i trade",
-    "-1155426882": "Questo blocco trasferisce informazioni al blocco delle condizioni di acquisto.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Questo blocco trasferisce nuovamente il controllo al blocco delle condizioni di acquisto, permettendoti di acquistare un altro contratto.",
     "-403103225": "riavvia",
     "-837044282": "Richiedi prezzo {{ contract_type }}",
