--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -80,6 +80,7 @@
     "165682516": "Se você não se importa em compartilhar, quais outras plataformas de negociação você usa?",
     "170185684": "Ignorar",
     "171307423": "Recuperação",
+    "171683420": "Reset main password",
     "176319758": "Máx. entrada total em 30 dias",
     "176654019": "$100,000 - $250,000",
     "179083332": "Data",
@@ -237,6 +238,8 @@
     "438067535": "Mais de $500.000",
     "440529960": "Escolha uma senha",
     "442520703": "$250.001 a $500.000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "Negação lógica",
     "451852761": "Continue no telefone",
     "452054360": "Semelhante ao RSI, este bloco fornece uma lista de valores para cada entrada na lista de entrada.",
@@ -248,6 +251,7 @@
     "462079779": "A revenda não está disponivel",
     "463361726": "Selecione um item",
     "465993338": "Oscar's Grind",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "O último nome é necessário",
     "473154195": "Configurações",
     "475492878": "Ir para Índices Sintéticos",
@@ -305,6 +309,7 @@
     "565410797": "A imagem abaixo ilustra como o bloco Matriz de Média Móvel Simples funciona:",
     "566274201": "1. Mercado",
     "567019968": "Uma variável está entre os componentes mais importantes e poderosos na criação de um bot. É uma maneira de armazenar informações, como texto ou números. As informações armazenadas como uma variável podem ser usadas e alteradas de acordo com as instruções fornecidas. As variáveis ​​podem receber qualquer nome, mas geralmente recebem nomes simbólicos úteis, para que seja mais fácil chamá-las durante a execução das instruções.",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "A vela {{ input_candle }} é preta?",
     "577215477": "contar com {{ variable }} de {{ start_number }} até {{ end_number }} por {{ step_size }}",
     "577779861": "Retirada",
@@ -337,7 +342,6 @@
     "626175020": "Multiplicador de Desvio Padrão Para Cima {{ input_number }}",
     "626809456": "Reenviar",
     "627292452": "<0>Seu Comprovante de Identidade ou Comprovante de Endereço</0> não atendeu aos nossos requisitos. Entraremos em contato via email dentro de 1-3 dias úteis.",
-    "627526394": "All you need from now is one password",
     "627814558": "Este bloco retorna um valor quando uma condição é verdadeira. Use este bloco em qualquer um dos blocos de funções acima.",
     "629145209": "Caso a operação \"E\" seja selecionada, o bloco retornará \"Verdadeiro\" apenas se os dois valores fornecidos forem \"Verdadeiro\"",
     "632398049": "Este bloco atribui um valor nulo a um item ou instrução.",
@@ -365,6 +369,7 @@
     "654924603": "Martingale",
     "657325150": "Este bloco é usado para definir opções de negociação dentro do bloco raiz de parâmetros Negociar. Algumas opções são aplicáveis ​​apenas a certos tipos de negociação. Parâmetros como duração e entrada são comuns entre a maioria dos tipos de negociação. A previsão é usada para tipos de negociação, como dígitos, enquanto as compensações de barreira são para tipos de negociação que envolvem barreiras como Toca/Não Toca, Termina Dentro/Fora, etc.",
     "660481941": "Para acessar seus aplicativos móveis e outros aplicativos de terceiros, primeiro você precisa gerar um token de API.",
+    "660991534": "Finish",
     "662609119": "Baixe o aplicativo para MT5",
     "663124295": "Disponibilidade",
     "665872465": "No exemplo abaixo, o preço de abertura é selecionado, o qual é atribuído a uma variável chamada \"op\".",
@@ -481,7 +486,6 @@
     "851508288": "Este bloco restringe um determinado número dentro de um intervalo definido.",
     "852583045": "String da Lista de Ticks",
     "854399751": "O código do dígito deve conter apenas números.",
-    "856713568": "Too many failed attempt",
     "857986403": "faça alguma coisa",
     "860319618": "Turismo",
     "862283602": "Número de telefone*",
@@ -658,7 +662,6 @@
     "1134879544": "Exemplo de um documento com reflexo",
     "1143730031": "Direção é {{ direction_type }}",
     "1144028300": "Matriz de Índice de Força Relativa (MIFR)",
-    "1144288893": "We’ve upgraded our system to support a single, more secure password across Deriv. Once you’ve set a new password, you can use it to log into all your Deriv and DMT5 accounts.",
     "1145927365": "Execute os blocos dentro de um determinado número de segundos",
     "1151964318": "ambos os lados",
     "1154021400": "lista",
@@ -813,7 +816,6 @@
     "1367023655": "Para garantir que sua perda não exceda sua Entrada, seu contrato será fechado automaticamente quando sua perda for igual <0/>.",
     "1367488817": "4. Reinicie as condições de negociação",
     "1367990698": "Índice Volatilidade 10",
-    "1368002992": "Go to Settings",
     "1369709538": "Our terms of use",
     "1371193412": "Cancelar",
     "1371641641": "Abra o link no seu celular",
@@ -925,7 +927,6 @@
     "1534796105": "Pega o valor da variável",
     "1539108340": "Índice EUR",
     "1540585098": "Recusar",
-    "1541818425": "Reset password",
     "1541969455": "Ambos",
     "1544642951": "Se você selecionar \"Sempre Acima\", ganhará o pagamento se os ticks consecutivos aumentarem sucessivamente após o ponto de entrada. Não haverá nenhum pagamento se qualquer tick cair ou for igual a qualquer ticks anterior.",
     "1549098835": "Total retirado",
@@ -1136,7 +1137,6 @@
     "1903437648": "Foto borrada detectada",
     "1905032541": "Agora estamos prontos para verificar sua identidade",
     "1906639368": "Se esta é a primeira vez que você tenta criar uma senha ou se esqueceu sua senha, por favor redefina sua senha.",
-    "1908023954": "Sorry, an error occurred while processing your request.",
     "1908239019": "Verifique se todo o documento está na foto",
     "1909769048": "mediana",
     "1914014145": "Até hoje",
@@ -1238,7 +1238,6 @@
     "2054500647": "Esta política de reclamações, que pode mudar de tempos em tempos, se aplica às suas contas registradas com Deriv (SVG) LLC e Deriv (V) Ltd.",
     "2054889300": "Criar \"%1\"",
     "2055317803": "Copie o link para o seu navegador no celular",
-    "2056801626": "Confirm your password",
     "2057419639": "Preço de saída",
     "2062912059": "função {{ function_name }} {{ function_params }}",
     "2063655921": "Ao comprar o contrato \"Fechar-para-Baixo\", você ganhará o multiplicador multiplicado pela diferença entre o próximo e o mínimo durante a duração do contrato.",
@@ -1294,6 +1293,7 @@
     "2143803283": "Erro de compra",
     "2144609616": "Se você selecionar \"Redefinir-Abaixo\", ganhará o Pagamento se o ponto de saída for estritamente menor que o ponto de entrada ou o ponto no momento da redefinição.",
     "2145690912": "Ganho de rendimentos",
+    "2145995536": "Create new account",
     "2146336100": "no texto %1, obtenha %2",
     "2146892766": "Experiência na negociação de opções binárias",
     "-2024100696": "Real Sintéticos",
@@ -1530,8 +1530,8 @@
     "-2073934245": "Os serviços de negociação financeira oferecidos neste site são adequados apenas para clientes que aceitem a possibilidade de perder todo o dinheiro que investem e que compreendam e tenham experiência do risco envolvido na aquisição de contratos financeiros. As transações em contratos financeiros apresentam um alto grau de risco. Se os contratos que você adquiriu expirarem sem valor, você perderá todo o seu investimento, o que inclui o prêmio do contrato.",
     "-1970096931": "A sua conta será aberta na Deriv (Europe) Limited, regulamentada pela Malta Gaming Authority, e estará sujeita às leis de Malta.",
     "-1988735853": "A sua conta será aberta na Deriv Investments (Europe) Limited, regulamentada pela Malta Financial Services Authority (MFSA) e estará sujeita à jurisdição e às leis de Malta.",
-    "-2068229627": "Não sou um PEP e não tenho sido nos últimos 12 meses.",
     "-1125193491": "Adicionar conta",
+    "-2068229627": "Não sou um PEP e não tenho sido nos últimos 12 meses.",
     "-763249420": "A página {{page_title}} está apenas <0 />disponível para clientes existentes.",
     "-207063174": "Se você possui uma conta ativa, <0>Faça login</0> para obter acesso total. Caso contrário,<1>Inscreva-se</1> para começar a negociar.",
     "-2139303636": "Você pode ter clicado em um link inválido ou a página foi movida para um novo endereço.",
@@ -1618,7 +1618,6 @@
     "-1738671831": "O tamanho da senha deve ter entre 8 e 25 caracteres.",
     "-1776746512": "A senha atual e a nova senha não podem ser iguais.",
     "-1465674403": "Altere a senha da sua conta Deriv",
-    "-1233938428": "We recommend using a unique password — one that you don’t use for any other sites.",
     "-1868608634": "Senha atual",
     "-89973258": "Reenviar email em {{seconds}}s",
     "-1617352279": "O email está na sua pasta de spam (às vezes as coisas se perdem lá).",
@@ -2022,7 +2021,6 @@
     "-1125272179": "Esta política de reclamações, que pode mudar de tempos em tempos, se aplica à sua conta registrada na Deriv Investments (Europe) Limited.",
     "-974989415": "Esta política de reclamações, que pode mudar de tempos em tempos, se aplica às suas contas registradas com Deriv (SVG) LLC e Deriv (FX) Ltd.",
     "-1639808836": "Se não estiver satisfeito com o resultado, você pode encaminhar sua reclamação para o <0>Serviço de Julgamento Independente de Apostas (IBAS)</0> preenchendo o formulário de adjudicação do IBAS. Observe que o IBAS lida apenas com disputas resultantes de transações.",
-    "-257890048": "<0/><1/>Como alternativa, você pode enviar sua reclamação para a plataforma de <2>Resolução de disputas online (ODR) da Comissão Europeia </2>.",
     "-1505742956": "<0/><1/>Você também pode encaminhar sua disputa para a Malta Gaming Authority por meio da <2>Unidade de Suporte ao Jogador</2>.",
     "-1406192787": "Se não ficar satisfeito com o resultado, você pode encaminhar sua reclamação para a <0>Comissão Financeira</0>.",
     "-1776547326": "<0 /> <1 /> Se você reside no Reino Unido e não está satisfeito com nossa resposta, pode encaminhar sua reclamação para o <2> Financial Ombudsman Service </2>.",
@@ -2203,15 +2201,11 @@
     "-382495564": "Senha alterada",
     "-2042845290": "Sua senha de investidor foi alterada.",
     "-1882295407": "Sua senha foi modificada.",
-    "-985529779": "Your DMT5 password is now the same as your Deriv account login password. To reset, please go to <0>Settings</0> page to change your password.",
     "-254497873": "Use esta senha para conceder acesso de visualização a outro usuário. Embora eles possam visualizar sua conta de negociação, eles não poderão negociar ou realizar qualquer outra ação.",
     "-161656683": "Senha atual do investidor",
     "-374736923": "Nova senha do investidor",
     "-1793894323": "Criar ou redefinir a senha do investidor",
     "-1444706724": "Gerenciar sua senha da conta real DMT5 {{account_title}}",
-    "-1234339445": "All you’ll need from now is one password",
-    "-1418023997": "Unavailable because of too many failed attempts. Please try again in a minute or reset your account password to continue.",
-    "-140300511": "Please confirm your Deriv password to create a DMT5 account. If you’ve forgotten your password, click <0>Reset password</0>.",
     "-1987408434": "Your MT5 Financial STP account will be opened through Deriv (BVI) Ltd. All trading in this account is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC). None of your other accounts, including your Deriv account, is subject to the regulations and guidelines of the British Virgin Islands Financial Services Commission (BVIFSC).",
     "-1281078994": "Escolha uma servidor para sua conta DMT5 {{ account_type }}",
     "-1752211105": "Transferir agora",
@@ -2256,7 +2250,6 @@
     "-2131859340": "Pare <0/>",
     "-1686280757": "<0>{{commission_percentage}}%</0> de (<1/> * {{multiplier}})",
     "-1043117679": "Quando sua perda atual for igual ou superior a {{stop_out_percentage}}% de sua aposta, seu contrato será fechado ao preço de ativo disponível mais próximo.",
-    "-1686434406": "Seu lucro é a variação percentual no preço de mercado multiplicado por sua Entrada e o multiplicador escolhido aqui.",
     "-477998532": "Seu contrato é fechado automaticamente quando sua perda é maior ou igual a esse valor.",
     "-243332856": "Estatísticas do último dígito para 1000 ticks mais recentes de {{ underlying_name }}",
     "-1675848843": "Erro",
@@ -2354,7 +2347,7 @@
     "-1652241017": "Lê uma propriedade selecionada da lista de detalhes do contrato",
     "-2012970860": "Este bloco fornece informações sobre seu último contrato.",
     "-985351204": "Negocie novamente",
-    "-1155426882": "Isso bloqueia o controle de transferência para o bloco Condições de Compra.",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "Esse bloco transferirá o controle de volta ao bloco Condições de compra, permitindo a compra de outro contrato.",
     "-403103225": "reiniciar",
     "-837044282": "Preço de Oferta {{ contract_type }}",
