--- a/public/i18n/zh_cn.json
+++ b/public/i18n/zh_cn.json
@@ -80,6 +80,7 @@
     "165682516": "如果不介意分享，您还使用其他哪些交易平台？",
     "170185684": "忽略",
     "171307423": "恢复",
+    "171683420": "Reset main password",
     "176319758": "30天内最大总投注金额",
     "176654019": "$100,000 - $250,000",
     "179083332": "日期",
@@ -237,6 +238,8 @@
     "438067535": "$500,000以上",
     "440529960": "设置密码",
     "442520703": "$250,001 - $500,000",
+    "443083339": "Choose a password for your DMT5 {{ account_type }} account",
+    "443933119": "Minimum of eight lower and uppercase English letters with numbers",
     "444484637": "逻辑求反",
     "451852761": "用您的电话继续操作",
     "452054360": "和相对强弱指数（RSI）相似，此程序块给您提供输入列表中每一项目的数值列表。",
@@ -248,6 +251,7 @@
     "462079779": "不提供转售",
     "463361726": "选择项目",
     "465993338": "奧斯卡研磨",
+    "466369320": "Your gross profit is the percentage change in market price times your stake and the multiplier chosen here.",
     "471195330": "姓氏是必填项",
     "473154195": "设置",
     "475492878": "试试综合指数",
@@ -305,6 +309,7 @@
     "565410797": "以下图像显示简单移动平均线数组程序块的工作原理：",
     "566274201": "1. 市场",
     "567019968": "变量是创建机器人时最重要且功能最强大的组件之一。这是一种以文本或数字形式存储信息的方法。可以根据给定的说明使用和更改存储为变量的信息。 变量可以使用任何名称，但通常会使用有用的符号名称，以便在执行指令期间更容易调用。",
+    "567509873": "<0/><1/>Alternatively, you can send your complaint to the <2>European Commission's Online Dispute Resolution (ODR)</2> platform. This is not applicable to UK clients.",
     "573173477": "蜡烛 {{ input_candle }} 是否呈黑色？",
     "577215477": "用 {{ variable }} 自 {{ start_number }} 至 {{ end_number }} 按 {{ step_size }} 计算",
     "577779861": "提款",
@@ -337,7 +342,6 @@
     "626175020": "标准偏差上涨乘数{{ input_number }}",
     "626809456": "重新提交",
     "627292452": "<0>您的身份证明或地址证明</0> 不符合我们的要求。请检查您的电子邮件收取进一步指示。",
-    "627526394": "从现在起您只需要一个密码即可",
     "627814558": "如果条件为真，此程序块将返回一个值。在以上任一函数块中使用此程序块。",
     "629145209": "如果选择了“AND”操作，则仅当两个给定值均为“真”时，程序块才返回“真”",
     "632398049": "此程序块给项目或语句分配空值。",
@@ -365,6 +369,7 @@
     "654924603": "鞅",
     "657325150": "此程序块用于在交易参数根块内定义交易选项。一些选项仅适用于某些交易类型。大多数交易类型中，诸如持续时间和投注等参数是常见的。预测用于数字之类的交易类型，而障碍位移用于涉及诸如触及/不触及、到期在范围内/范围外等障碍的交易类型。",
     "660481941": "首先您必须生成API令牌才能够访问您的移动应用程序和其他第三方应用程序。",
+    "660991534": "Finish",
     "662609119": "下载 MT5 应用程序",
     "663124295": "可用性",
     "665872465": "下例中，先选定开盘价，然后分配予称为\"op\"的变量。",
@@ -481,7 +486,6 @@
     "851508288": "此程序块含设置范围内的指定数字。",
     "852583045": "跳动点列表字符串",
     "854399751": "数字代码必须只含数目字。",
-    "856713568": "失败尝试次数太多",
     "857986403": "做些什么",
     "860319618": "旅游",
     "862283602": "电话号码*",
@@ -658,7 +662,6 @@
     "1134879544": "带有眩光的文档示例",
     "1143730031": "方向为 {{ direction_type }}",
     "1144028300": "相对强度指标数组 (RSIA)",
-    "1144288893": "我们的系统已升级，以支持Deriv的单一更安全密码。设置新密码后，即可使用它登录所有Deriv和DMT5账户。",
     "1145927365": "在指定秒数后运行内部程序块",
     "1151964318": "两边",
     "1154021400": "列表",
@@ -813,7 +816,6 @@
     "1367023655": "为确保您的亏损不超过您的投注金额，当亏损等于<0/>时，您的合约将自动平仓。",
     "1367488817": "4. 重启交易条件",
     "1367990698": "波动率 10 指数",
-    "1368002992": "前往设置",
     "1369709538": "我们的使用条款",
     "1371193412": "取消",
     "1371641641": "用手机打开链接",
@@ -925,7 +927,6 @@
     "1534796105": "取得变量值",
     "1539108340": "欧元指数",
     "1540585098": "拒绝",
-    "1541818425": "重置密码",
     "1541969455": "两个",
     "1544642951": "如果您选择“只会持续上涨”期权，只要入市现价后的价格持续上涨，您将获得赔付。如果期间内的价格有任何下跌或相等于之前的价格， 您将不会获得赔付。",
     "1549098835": "提款总额",
@@ -1136,7 +1137,6 @@
     "1903437648": "检测到模糊的照片",
     "1905032541": "我们现在准备验证您的身份",
     "1906639368": "如这是您首次尝试创建密码或您已忘了密码，请重置。",
-    "1908023954": "对不起，您的请求处理发生错误。",
     "1908239019": "确保所有文档都在照片中",
     "1909769048": "中值",
     "1914014145": "今天",
@@ -1238,7 +1238,6 @@
     "2054500647": "此投诉政策可能会不时更改，适用于您在 Deriv (SVG) LLC 和 Deriv (V) Ltd 注册的账户。",
     "2054889300": "创建\"%1\"",
     "2055317803": "复制链接到您的手机浏览器",
-    "2056801626": "确认密码",
     "2057419639": "退市现价",
     "2062912059": "功能 {{ function_name }} {{ function_params }}",
     "2063655921": "透过购入“收盘至最低值”合约，您将赢取合约期间内乘数值乘以收盘与最低值之间的差额。",
@@ -1294,6 +1293,7 @@
     "2143803283": "买入错误",
     "2144609616": "如果您选择“重设-下跌”，只要退市现价严格低于入市现价或重设时现货价，您将获得赔付。",
     "2145690912": "赚取收入",
+    "2145995536": "Create new account",
     "2146336100": "%1文本中获取%2",
     "2146892766": "二元期权交易经验",
     "-2024100696": "真实综合",
@@ -1530,8 +1530,8 @@
     "-2073934245": "本网站提供的金融交易服务仅适合这样的客户：能够接受全部投入资金亏损的可能性，了解购买金融合约的风险并具有相关经验。金融合约交易有很高的风险。如果购买的合约到期时一文不值，您将损失全部投资，包括合约费用。",
     "-1970096931": "您的账户将通过 Deriv (Europe) Limited 开立， 并由马耳他博彩机构监管，以及受马耳他的法律管辖。",
     "-1988735853": "您的账户将通过 Deriv Investments (Europe) Limited 开立，并由马耳他金融服务机构(MFSA) 监管，以及受马耳他的法律管辖。",
-    "-2068229627": "本人不是政治公众人士，而且在过去的12个月中，我未曾当过政治公众人士。",
     "-1125193491": "添加账户",
+    "-2068229627": "本人不是政治公众人士，而且在过去的12个月中，我未曾当过政治公众人士。",
     "-763249420": "{{page_title}} 页面仅<0 />现有客户可用。",
     "-207063174": "如果您有活跃的账户, 请<0>登录</0>以获得完整的访问权限。否则请<1>注册</1>以开始交易。",
     "-2139303636": "可能您使用的链接已无效，或该页面已转移到新地址。",
@@ -1618,7 +1618,6 @@
     "-1738671831": "密码长度须介于 8至25 个字符。",
     "-1776746512": "当前密码和新密码不能相同。",
     "-1465674403": "更改Deriv密码",
-    "-1233938428": "我们建议您使用唯一的密码，您不会在其他任何网站上使用的密码。",
     "-1868608634": "当前密码",
     "-89973258": "{{seconds}}后重发电子邮件",
     "-1617352279": "邮件在您的垃圾邮箱（有时一些邮件会误送到那儿）。",
@@ -2022,7 +2021,6 @@
     "-1125272179": "此投诉政策可能会不时更改，适用于您在 Deriv Investments (Europe) Limited 注册的账户。",
     "-974989415": "此投诉政策可能会不时更改，适用于您在 Deriv (SVG) LLC 和 Deriv (FX) Ltd 注册的账户。",
     "-1639808836": "如果您对结果不满意，可以通过填写 IBAS 裁决表向<0>独立博彩裁决服务（IBAS）</0>上诉。请注意，IBAS 仅处理因交易引起的争议。",
-    "-257890048": "<0/> <1/>或者，您可以将投诉提呈到<2>欧洲委员会的在线争议解决（ODR）</2>平台。",
     "-1505742956": "<0/> <1/>您还可以通过<2>投注者支持部门</2>将您的争议提交马耳他博彩管理局。",
     "-1406192787": "如果您对结果不满意，可以将投诉上报给<0>金融委员会</0>。",
     "-1776547326": "<0/><1/>如果您在英国居住，并对我们的答复不满意，则可以进一步向<2>金融申诉专员服务</2>提出投诉。",
@@ -2203,15 +2201,11 @@
     "-382495564": "密码已更改",
     "-2042845290": "您的投资者密码已被更改.",
     "-1882295407": "您的密码已被更改。",
-    "-985529779": "现在您的DMT5密码与Deriv账户的登录密码相同。若要重置，请转到<0>设置</0>页面更改密码。",
     "-254497873": "用此密码给予其他用户查看权限。当该用户查看您的交易账户时将无法交易或采取任何其他行动。",
     "-161656683": "当前投资者密码",
     "-374736923": "新投资者密码",
     "-1793894323": "创建或重置投资者密码",
     "-1444706724": "管理 DMT5 真实 {{account_title}} 账户密码",
-    "-1234339445": "从现在起您只需要一个密码即可",
-    "-1418023997": "由于尝试失败次数过多，因此无法使用。请稍后重试或重置账户密码以继续操作。",
-    "-140300511": "请确认您的Deriv密码以创建DMT5账户。如果您忘了密码，请单击<0>重置密码</0>。",
     "-1987408434": "您的 MT5 金融 STP 账户将通过 Deriv（BVI）Ltd 开立。该账户的所有交易均受英属维尔京群岛金融服务委员会（BVIFSC）的规定和准则的约束。所有其他账户，包括您的Deriv账户，均不受英属维尔京群岛金融服务委员会（BVIFSC）的法规和准则的约束。",
     "-1281078994": "选择 DMT5 {{ account_type }} 账户的服务器",
     "-1752211105": "立刻转汇",
@@ -2256,7 +2250,6 @@
     "-2131859340": "强制平仓<0/>",
     "-1686280757": "(<1/> * {{multiplier}}) 的<0>{{commission_percentage}}%</0>",
     "-1043117679": "当您当前的亏损等于或超过您投注额的{{stop_out_percentage}}％时，您的合约将以最接近的可用资产价格平仓。",
-    "-1686434406": "您的盈利将是市价变化的百分比乘以您的投注额和此处选择的乘数。",
     "-477998532": "当您的亏损达到或大于此金额，合约将自动平仓。",
     "-243332856": "{{ underlying_name }} 最新1000 跳点的最后统计数字",
     "-1675848843": "错误",
@@ -2354,7 +2347,7 @@
     "-1652241017": "从合约详细信息列表中读取所选的财产",
     "-2012970860": "此程序块为您提供有关上一份合约的信息。",
     "-985351204": "再次交易",
-    "-1155426882": "此程序块将控制权转移到买入条件程序块。",
+    "-2082345383": "These blocks transfer control to the Purchase conditions block.",
     "-172574065": "此程序块将控制权转移回“购入”条件程序块，让您可以购买另一份合约。",
     "-403103225": "重启",
     "-837044282": "询问价格 {{ contract_type }}",
